Update command data for Volkswagen/T-Roc

--- a/tests/test_cases/2021/command_support.yaml
+++ b/tests/test_cases/2021/command_support.yaml
@@ -38,6 +38,7 @@ supported_commands_by_ecu:
   - 746.7B0.222622|fc=1:VOLKSWAGEN_CLIMATE_FR_L_T_FLP_ACT_VALUE
   - 746.7B0.222626|fc=1:VOLKSWAGEN_CLIMATE_FR_R_T_FLP_ACT_VALUE
   - 746.7B0.2226ED|fc=1:VOLKSWAGEN_AIR_POLUTION,VOLKSWAGEN_CLIMATE_AIR_POLUTION_LVL
+  - 746.7B0.22482B|fc=1:VOLKSWAGEN_CLIMATE_A_C_CLCH
   "767":
   - 767.7D1.220838|fc=1:VOLKSWAGEN_ECALL_SOC,VOLKSWAGEN_ECALL_STATUS
   - 767.7D1.222431|fc=1:VOLKSWAGEN_GPS_SATS_TRACKED,VOLKSWAGEN_GPS_SATS_VISIBLE
@@ -103,6 +104,7 @@ supported_commands_by_ecu:
   - 7E0.0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
   - 7E0.0104:LOAD_PCT
   - 7E0.0105:ECT
+  - 7E0.0106:SHRTFT1
   - 7E0.010B:MAP
   - 7E0.010C:RPM
   - 7E0.010D:VSS
@@ -119,12 +121,14 @@ supported_commands_by_ecu:
   - 7E0.0133:BARO
   - 7E0.0134:LAMBDA11_CURRENT,O2S11_CURRENT
   - 7E0.0142:VPWR
+  - 7E0.0144:EQ_RAT
   - 7E0.0145:TP_R
   - 7E0.0146:AAT
   - 7E0.0149:APP_D
   - 7E0.014A:APP_E
   - 7E0.014C:TAC_PCT
   - 7E0.014F:MAX_EQ_RAT,MAX_MAP,MAX_O2_CURR,MAX_O2_VOLT
+  - 7E0.015E:FUEL_RATE
   - 7E0.0167:ECT_1,ECT_1_SUP,ECT_2,ECT_2_SUP
   - 7E0.0169:EGR_A_ACT,EGR_A_ACT_SUP,EGR_A_CMD,EGR_A_CMD_SUP,EGR_A_ERR,EGR_A_ERR_SUP,EGR_B_ACT,EGR_B_ACT_SUP,EGR_B_CMD,EGR_B_CMD_SUP,EGR_B_ERR,EGR_B_ERR_SUP
   - 7E0.22100C
@@ -133,6 +137,7 @@ supported_commands_by_ecu:
   - 7E0.22105E
   - 7E0.2210F9
   - 7E0.2211B2
+  - 7E0.2211BA:VOLKSWAGEN_OIL_LEVEL
   - 7E0.2211C4:VOLKSWAGEN_OIL_MAX
   - 7E0.2211C5:VOLKSWAGEN_OIL_MIN
   - 7E0.22123C
@@ -144,6 +149,8 @@ supported_commands_by_ecu:
   - 7E0.22167D
   - 7E0.2216A9
   - 7E0.22F469
+  - 7E0.7E8.22028D:VOLKSWAGEN_ECU_TEMP
+  - 7E0.7E8.221004:VOLKSWAGEN_AAT_V3
   - 7E0.7E8.22100D
   - 7E0.7E8.221026
   - 7E0.7E8.22102E
@@ -164,6 +171,7 @@ supported_commands_by_ecu:
   - 7E0.7E8.2210DD
   - 7E0.7E8.2210DE
   - 7E0.7E8.2210DF
+  - 7E0.7E8.2210E0:VOLKSWAGEN_ODO_2_V3,VOLKSWAGEN_ODO_V4
   - 7E0.7E8.2210E2
   - 7E0.7E8.2210E3
   - 7E0.7E8.2210E4
@@ -181,17 +189,22 @@ supported_commands_by_ecu:
   - 7E0.7E8.22112C:VOLKSWAGEN_ACT
   - 7E0.7E8.221131
   - 7E0.7E8.221139:VOLKSWAGEN_MEAN_INJ_QUANTITY
+  - 7E0.7E8.22113F:VOLKSWAGEN_FUEL_CONS
   - 7E0.7E8.221148
   - 7E0.7E8.221149
   - 7E0.7E8.22114C
   - 7E0.7E8.221151:VOLKSWAGEN_EM_RPM_1
   - 7E0.7E8.221153:VOLKSWAGEN_EM_TORQ_1
+  - 7E0.7E8.221158:VOLKSWAGEN_MAX_DCHA_CUR_2
+  - 7E0.7E8.221159:VOLKSWAGEN_MAX_CHA_CUR_2
   - 7E0.7E8.22115C
+  - 7E0.7E8.221160:VOLKSWAGEN_ODO_HD
   - 7E0.7E8.221169
   - 7E0.7E8.22116A
   - 7E0.7E8.221187:VOLKSWAGEN_ACCELERATION
   - 7E0.7E8.2211A6
   - 7E0.7E8.2211BC
+  - 7E0.7E8.2211BD:VOLKSWAGEN_OIL_LEVEL_WARN
   - 7E0.7E8.2211BE:VOLKSWAGEN_EOT_V2
   - 7E0.7E8.2211BF
   - 7E0.7E8.2211C8
@@ -351,7 +364,6 @@ unsupported_commands_by_ecu:
   - 746.7B0.2227C3|fc=1:VOLKSWAGEN_HVAC_OUTSIDE_HUM
   - 746.7B0.2227D6
   - 746.7B0.2242DB|fc=1:VOLKSWAGEN_CO2_CONTENT_INTERIOR
-  - 746.7B0.22482B|fc=1:VOLKSWAGEN_CLIMATE_A_C_CLCH
   - 746.7B0.224EEF|fc=1:VOLKSWAGEN_AC_REFRIG_P_SENS1,VOLKSWAGEN_AC_REFRIG_T_SENS1,VOLKSWAGEN_AC_REFRIG_T_SENS1_INT
   - 746.7B0.22F449|fc=1:VOLKSWAGEN_APP_D
   "74F":
@@ -363,7 +375,6 @@ unsupported_commands_by_ecu:
   - 7E0.22114F
   - 7E0.221156
   - 7E0.22115E
-  - 7E0.2211BA:VOLKSWAGEN_OIL_LEVEL
   - 7E0.2211F6
   - 7E0.2212CB
   - 7E0.221314
@@ -371,17 +382,14 @@ unsupported_commands_by_ecu:
   - 7E0.22178C
   - 7E0.22295A:VOLKSWAGEN_ODO_2_V2,VOLKSWAGEN_ODO_V2
   - 7E0.22F42C
-  - 7E0.7E8.22028D:VOLKSWAGEN_ECU_TEMP
   - 7E0.7E8.2208D2:VOLKSWAGEN_HVBAT_SOC_DISP_V2
   - 7E0.7E8.221002:VOLKSWAGEN_AC_COMP_T
-  - 7E0.7E8.221004:VOLKSWAGEN_AAT_V3
   - 7E0.7E8.221007
   - 7E0.7E8.221010
   - 7E0.7E8.2210D4
   - 7E0.7E8.2210D5
   - 7E0.7E8.2210DA
   - 7E0.7E8.2210DB
-  - 7E0.7E8.2210E0:VOLKSWAGEN_ODO_2_V3,VOLKSWAGEN_ODO_V4
   - 7E0.7E8.2210E1
   - 7E0.7E8.2210E7
   - 7E0.7E8.221106
@@ -389,7 +397,6 @@ unsupported_commands_by_ecu:
   - 7E0.7E8.221114
   - 7E0.7E8.221125
   - 7E0.7E8.221128
-  - 7E0.7E8.22113F:VOLKSWAGEN_FUEL_CONS
   - 7E0.7E8.221146
   - 7E0.7E8.221147
   - 7E0.7E8.22114A
@@ -399,14 +406,10 @@ unsupported_commands_by_ecu:
   - 7E0.7E8.221154:VOLKSWAGEN_EM_TORQ_2
   - 7E0.7E8.221155:VOLKSWAGEN_EM_TORQ_3
   - 7E0.7E8.221156:VOLKSWAGEN_HVBAT_SOC_V2
-  - 7E0.7E8.221158:VOLKSWAGEN_MAX_DCHA_CUR_2
-  - 7E0.7E8.221159:VOLKSWAGEN_MAX_CHA_CUR_2
   - 7E0.7E8.22115A
   - 7E0.7E8.22115B:VOLKSWAGEN_VSS_DIR
-  - 7E0.7E8.221160:VOLKSWAGEN_ODO_HD
   - 7E0.7E8.221164:VOLKSWAGEN_HVBAT_SOC_DISP
   - 7E0.7E8.2211BB:VOLKSWAGEN_OIL_CRIT
-  - 7E0.7E8.2211BD:VOLKSWAGEN_OIL_LEVEL_WARN
   - 7E0.7E8.2211C1
   - 7E0.7E8.2211CE
   - 7E0.7E8.22128A
