--- a/tests/test_cases/2021/commands/713.77D.221810|fc=1.yaml
+++ b/tests/test_cases/2021/commands/713.77D.221810|fc=1.yaml
@@ -20,3 +20,13 @@ test_cases:
   response: |-
     77D100C62181000FF2E
     77D217FFF7FFFFFFFAA
+- expected_values:
+    VOLKSWAGEN_HYD_BRAKE_BOOST_ACTIVE: 0
+  response: |-
+    77D100C62181001000A
+    77D21FD5500000000AA
+- expected_values:
+    VOLKSWAGEN_HYD_BRAKE_BOOST_ACTIVE: 0
+  response: |-
+    77D100C62181001000A
+    77D21FD9400000000AA
