--- a/tests/test_cases/2021/commands/7E0.0106.yaml
+++ b/tests/test_cases/2021/commands/7E0.0106.yaml
@@ -1,5 +1,17 @@
 command_id: 7E0.0106
 test_cases:
 - expected_values:
+    SHRTFT1: -3.125
+  response: 7E80341067C
+- expected_values:
+    SHRTFT1: -1.5625
+  response: 7E80341067E
+- expected_values:
     SHRTFT1: 0
   response: '7E803410680'
+- expected_values:
+    SHRTFT1: 0.78125
+  response: '7E803410681'
+- expected_values:
+    SHRTFT1: 2.34375
+  response: '7E803410683'
