--- a/tests/test_cases/2021/commands/7E0.2211BA.yaml
+++ b/tests/test_cases/2021/commands/7E0.2211BA.yaml
@@ -1,11 +1,23 @@
 command_id: 7E0.2211BA
 test_cases:
 - expected_values:
+    VOLKSWAGEN_OIL_LEVEL: 45.48
+  response: 7E8056211BA2C6A
+- expected_values:
+    VOLKSWAGEN_OIL_LEVEL: 47.92
+  response: 7E8056211BA2ECC
+- expected_values:
+    VOLKSWAGEN_OIL_LEVEL: 48.18
+  response: 7E8056211BA2F0D
+- expected_values:
     VOLKSWAGEN_OIL_LEVEL: 50.74
   response: 7E8056211BA318D
 - expected_values:
     VOLKSWAGEN_OIL_LEVEL: 51.1
   response: 7E8056211BA31E7
+- expected_values:
+    VOLKSWAGEN_OIL_LEVEL: 51.24
+  response: 7E8056211BA320A
 - expected_values:
     VOLKSWAGEN_OIL_LEVEL: 51.46
   response: 7E8056211BA3241
