--- a/tests/test_cases/2021/commands/7E0.7E8.2210E0.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.2210E0.yaml
@@ -4,3 +4,19 @@ test_cases:
     VOLKSWAGEN_ODO_2_V3: 61139
     VOLKSWAGEN_ODO_V4: 61139
   response: 7E8076210E00000EED3
+- expected_values:
+    VOLKSWAGEN_ODO_2_V3: 61140
+    VOLKSWAGEN_ODO_V4: 61140
+  response: 7E8076210E00000EED4
+- expected_values:
+    VOLKSWAGEN_ODO_2_V3: 61141
+    VOLKSWAGEN_ODO_V4: 61141
+  response: 7E8076210E00000EED5
+- expected_values:
+    VOLKSWAGEN_ODO_2_V3: 61143
+    VOLKSWAGEN_ODO_V4: 61143
+  response: 7E8076210E00000EED7
+- expected_values:
+    VOLKSWAGEN_ODO_2_V3: 61144
+    VOLKSWAGEN_ODO_V4: 61144
+  response: 7E8076210E00000EED8
