--- a/tests/test_cases/2021/commands/7E0.7E8.22113F.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.22113F.yaml
@@ -4,5 +4,23 @@ test_cases:
     VOLKSWAGEN_FUEL_CONS: 0
   response: 7E80562113F0000
 - expected_values:
+    VOLKSWAGEN_FUEL_CONS: 0.88
+  response: 7E80562113F0058
+- expected_values:
+    VOLKSWAGEN_FUEL_CONS: 0.92
+  response: 7E80562113F005C
+- expected_values:
+    VOLKSWAGEN_FUEL_CONS: 1.4
+  response: 7E80562113F008C
+- expected_values:
+    VOLKSWAGEN_FUEL_CONS: 2.67
+  response: 7E80562113F010B
+- expected_values:
+    VOLKSWAGEN_FUEL_CONS: 2.86
+  response: 7E80562113F011E
+- expected_values:
+    VOLKSWAGEN_FUEL_CONS: 3.54
+  response: 7E80562113F0162
+- expected_values:
     VOLKSWAGEN_FUEL_CONS: 3.88
   response: 7E80562113F0184
