--- a/tests/test_cases/2021/commands/7E0.7E8.2211BD.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.2211BD.yaml
@@ -1,6 +1,15 @@
 command_id: 7E0.7E8.2211BD
 test_cases:
 - expected_values:
+    VOLKSWAGEN_OIL_LEVEL_WARN: 1.1244
+  response: 7E8056211BD0AFB
+- expected_values:
+    VOLKSWAGEN_OIL_LEVEL_WARN: 1.1428
+  response: 7E8056211BD0B29
+- expected_values:
+    VOLKSWAGEN_OIL_LEVEL_WARN: 1.1844
+  response: 7E8056211BD0B91
+- expected_values:
     VOLKSWAGEN_OIL_LEVEL_WARN: 1.2224
   response: 7E8056211BD0BF0
 - expected_values:
