Update command data for Volkswagen/T-Roc

--- a/tests/test_cases/2021/commands/7E0.0144.yaml
+++ b/tests/test_cases/2021/commands/7E0.0144.yaml
@@ -1,6 +1,12 @@
 command_id: 7E0.0144
 test_cases:
 - expected_values:
+    EQ_RAT: 0.91994
+  response: 7E804414475C0
+- expected_values:
+    EQ_RAT: 0.99733
+  response: 7E80441447FA8
+- expected_values:
     EQ_RAT: 1.00002
   response: '7E80441448000'
 - expected_values:
