--- a/tests/test_cases/2021/commands/7E0.7E8.2210E0.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.2210E0.yaml
@@ -20,3 +20,15 @@ test_cases:
     VOLKSWAGEN_ODO_2_V3: 61144
     VOLKSWAGEN_ODO_V4: 61144
   response: 7E8076210E00000EED8
+- expected_values:
+    VOLKSWAGEN_ODO_2_V3: 61145
+    VOLKSWAGEN_ODO_V4: 61145
+  response: 7E8076210E00000EED9
+- expected_values:
+    VOLKSWAGEN_ODO_2_V3: 61148
+    VOLKSWAGEN_ODO_V4: 61148
+  response: 7E8076210E00000EEDC
+- expected_values:
+    VOLKSWAGEN_ODO_2_V3: 61149
+    VOLKSWAGEN_ODO_V4: 61149
+  response: 7E8076210E00000EEDD
