--- a/tests/test_cases/2021/commands/7E0.7E8.221158.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.221158.yaml
@@ -1,6 +1,9 @@
 command_id: 7E0.7E8.221158
 test_cases:
 - expected_values:
+    VOLKSWAGEN_MAX_DCHA_CUR_2: -4
+  response: 7E805621158FFD8
+- expected_values:
     VOLKSWAGEN_MAX_DCHA_CUR_2: -3.9
   response: 7E805621158FFD9
 - expected_values:
