--- a/tests/test_cases/2021/commands/7E0.0106.yaml
+++ b/tests/test_cases/2021/commands/7E0.0106.yaml
@@ -4,6 +4,9 @@ test_cases:
     SHRTFT1: -3.125
   response: 7E80341067C
 - expected_values:
+    SHRTFT1: -2.34375
+  response: 7E80341067D
+- expected_values:
     SHRTFT1: -1.5625
   response: 7E80341067E
 - expected_values:
@@ -15,3 +18,6 @@ test_cases:
 - expected_values:
     SHRTFT1: 2.34375
   response: '7E803410683'
+- expected_values:
+    SHRTFT1: 3.125
+  response: '7E803410684'
