--- a/tests/test_cases/2021/commands/7E0.7E8.2211BD.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.2211BD.yaml
@@ -4,6 +4,9 @@ test_cases:
     VOLKSWAGEN_OIL_LEVEL_WARN: 1.1244
   response: 7E8056211BD0AFB
 - expected_values:
+    VOLKSWAGEN_OIL_LEVEL_WARN: 1.1392
+  response: 7E8056211BD0B20
+- expected_values:
     VOLKSWAGEN_OIL_LEVEL_WARN: 1.1428
   response: 7E8056211BD0B29
 - expected_values:
