--- a/tests/test_cases/2021/commands/7E0.7E8.221159.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.221159.yaml
@@ -4,6 +4,9 @@ test_cases:
     VOLKSWAGEN_MAX_CHA_CUR_2: 223.6
   response: 7E80562115908BC
 - expected_values:
+    VOLKSWAGEN_MAX_CHA_CUR_2: 231.5
+  response: 7E805621159090B
+- expected_values:
     VOLKSWAGEN_MAX_CHA_CUR_2: 536.7
   response: 7E80562115914F7
 - expected_values:
