--- a/tests/test_cases/2021/commands/7E0.0144.yaml
+++ b/tests/test_cases/2021/commands/7E0.0144.yaml
@@ -4,6 +4,9 @@ test_cases:
     EQ_RAT: 0.91994
   response: 7E804414475C0
 - expected_values:
+    EQ_RAT: 0.98439
+  response: 7E80441447E00
+- expected_values:
     EQ_RAT: 0.99733
   response: 7E80441447FA8
 - expected_values:
@@ -12,6 +15,9 @@ test_cases:
 - expected_values:
     EQ_RAT: 1.03127
   response: '7E80441448400'
+- expected_values:
+    EQ_RAT: 1.09255
+  response: 7E80441448BD8
 - expected_values:
     EQ_RAT: 1.99
   response: 7E8044144FFFF
