--- a/tests/test_cases/2021/commands/7E0.7E8.2211BD.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.2211BD.yaml
@@ -1,6 +1,9 @@
 command_id: 7E0.7E8.2211BD
 test_cases:
 - expected_values:
+    VOLKSWAGEN_OIL_LEVEL_WARN: 1.1192
+  response: 7E8056211BD0AEE
+- expected_values:
     VOLKSWAGEN_OIL_LEVEL_WARN: 1.1244
   response: 7E8056211BD0AFB
 - expected_values:
