--- a/tests/test_cases/2021/commands/713.77D.221810|fc=1.yaml
+++ b/tests/test_cases/2021/commands/713.77D.221810|fc=1.yaml
@@ -13,6 +13,11 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_HYD_BRAKE_BOOST_ACTIVE: 0
   response: |-
+    77D100C621810000A00
+    77D217FFF7FFFFFFFAA
+- expected_values:
+    VOLKSWAGEN_HYD_BRAKE_BOOST_ACTIVE: 0
+  response: |-
     77D100C62181000FF2E
     77D217FFF7FFFFFFFAA
 - expected_values:
