--- a/tests/test_cases/2021/commands/746.7B0.222622|fc=1.yaml
+++ b/tests/test_cases/2021/commands/746.7B0.222622|fc=1.yaml
@@ -2,10 +2,13 @@ command_id: 746.7B0.222622|fc=1
 test_cases:
 - expected_values:
     VOLKSWAGEN_CLIMATE_FR_L_T_FLP_ACT_VALUE: 0
+    VOLKSWAGEN_FRONT_LEFT_T_FLAP_ACTUAL_VALUE: 0
   response: 7B006622622001700
 - expected_values:
     VOLKSWAGEN_CLIMATE_FR_L_T_FLP_ACT_VALUE: 100
+    VOLKSWAGEN_FRONT_LEFT_T_FLAP_ACTUAL_VALUE: 100
   response: 7B00662262200E8C8
 - expected_values:
     VOLKSWAGEN_CLIMATE_FR_L_T_FLP_ACT_VALUE: 100
+    VOLKSWAGEN_FRONT_LEFT_T_FLAP_ACTUAL_VALUE: 100
   response: 7B00662262200EBC8
