--- a/tests/test_cases/2022/commands/710.77A.222A0B|fc=1.yaml
+++ b/tests/test_cases/2022/commands/710.77A.222A0B|fc=1.yaml
@@ -1,8 +1,8 @@
 command_id: 710.77A.222A0B|fc=1
 test_cases:
 - expected_values:
-    VOLKSWAGEN_BAT_T: 12
+    VOLKSWAGEN_BAT_T_V2: 12
   response: 77A04622A0B34
 - expected_values:
-    VOLKSWAGEN_BAT_T: 38
+    VOLKSWAGEN_BAT_T_V2: 38
   response: 77A04622A0B4E
