--- a/tests/test_cases/2022/commands/746.7B0.222605|fc=1.yaml
+++ b/tests/test_cases/2022/commands/746.7B0.222605|fc=1.yaml
@@ -2,7 +2,9 @@ command_id: 746.7B0.222605|fc=1
 test_cases:
 - expected_values:
     VOLKSWAGEN_CLIMATE_REFRIG_P: 6.8
+    VOLKSWAGEN_REFRIGERANT_PRESSURE: 6.8
   response: 7B00462260522
 - expected_values:
     VOLKSWAGEN_CLIMATE_REFRIG_P: 11.6
+    VOLKSWAGEN_REFRIGERANT_PRESSURE: 11.6
   response: 7B0046226053A
