--- a/tests/test_cases/2022/commands/7E1.7E9.223841.yaml
+++ b/tests/test_cases/2022/commands/7E1.7E9.223841.yaml
@@ -1,14 +1,18 @@
-command_id: 7E1.223841
+command_id: 7E1.7E9.223841
 test_cases:
 - expected_values:
     VOLKSWAGEN_ODO_TCM_1: 143104
+    VOLKSWAGEN_ODO_V1: 308070.4
   response: 7E907623841002F0200
 - expected_values:
     VOLKSWAGEN_ODO_TCM_1: 153863
+    VOLKSWAGEN_ODO_V1: 12327372.8
   response: '7E90762384107590200'
 - expected_values:
     VOLKSWAGEN_ODO_TCM_1: 141092
+    VOLKSWAGEN_ODO_V1: 60653619.2
   response: '7E90762384124270200'
 - expected_values:
     VOLKSWAGEN_ODO_TCM_1: 141567
+    VOLKSWAGEN_ODO_V1: 428081203.2
   response: 7E907623841FF280200
