--- a/tests/test_cases/2021/command_support.yaml
+++ b/tests/test_cases/2021/command_support.yaml
@@ -3,13 +3,13 @@ supported_commands_by_ecu:
   "70E":
   - 70E.778.221945|fc=1:VOLKSWAGEN_HEATER_FOR_NOZZLES_ACTIVE
   "710":
-  - 710.222A0A:VOLKSWAGEN_ODO_2,VOLKSWAGEN_SSB_SENSOR_T
+  - 710.222A0A:VOLKSWAGEN_BAT_T,VOLKSWAGEN_ODO_2,VOLKSWAGEN_ODO_V2
   - 710.77A.222A00|fc=1:VOLKSWAGEN_SSB_VT
   - 710.77A.222A07|fc=1:VOLKSWAGEN_BAT_V_2A07,VOLKSWAGEN_SSB_V
   - 710.77A.222A09|fc=1:VOLKSWAGEN_BAT_I,VOLKSWAGEN_SSB_C
-  - 710.77A.222A0B|fc=1:VOLKSWAGEN_BAT_T
+  - 710.77A.222A0B|fc=1:VOLKSWAGEN_BAT_T_V2
   - 710.77A.222A0C|fc=1:VOLKSWAGEN_BAT_SOC,VOLKSWAGEN_SSB_SOC
-  - 710.77A.222A0E|fc=1:VOLKSWAGEN_BAT_INT_R,VOLKSWAGEN_SSB_R
+  - 710.77A.222A0E|fc=1:VOLKSWAGEN_BAT_INT_R,VOLKSWAGEN_SSB_R,VOLKSWAGEN_SSB_RES_INT
   - 710.77A.222A0F|fc=1:VOLKSWAGEN_USE_BAT_CHG
   - 710.77A.222A10|fc=1:VOLKSWAGEN_BAT_V_AT_REST
   - 710.77A.222A61|fc=1:VOLKSWAGEN_SSB_TOTAL_CHARGE,VOLKSWAGEN_SSB_TOTAL_DISCHARGE
@@ -21,26 +21,26 @@ supported_commands_by_ecu:
   "746":
   - 746.7B0.222603|fc=1:VOLKSWAGEN_CLIMATE_A_C_COMP_SPD
   - 746.7B0.222604|fc=1:VOLKSWAGEN_CLIMATE_A_C_COMP_LOAD,VOLKSWAGEN_HVAC_AC_LOAD
-  - 746.7B0.222605|fc=1:VOLKSWAGEN_CLIMATE_REFRIG_P
+  - 746.7B0.222605|fc=1:VOLKSWAGEN_CLIMATE_REFRIG_P,VOLKSWAGEN_REFRIGERANT_PRESSURE
   - 746.7B0.222606|fc=1:VOLKSWAGEN_CLIMATE_RAD_FAN_ACT_DUTY,VOLKSWAGEN_HVAC_FAN1_ACT,VOLKSWAGEN_HVAC_FAN2_ACT
   - 746.7B0.222607|fc=1:VOLKSWAGEN_CLIMATE_RAD_FAN_CMD_DUTY,VOLKSWAGEN_HVAC_FAN_CMD
-  - 746.7B0.222609|fc=1:VOLKSWAGEN_AAT_V2,VOLKSWAGEN_HVAC_OUTSIDE_T
+  - 746.7B0.222609|fc=1:VOLKSWAGEN_AAT_FROMCABIN,VOLKSWAGEN_AAT_V2,VOLKSWAGEN_HVAC_OUTSIDE_T
   - 746.7B0.22260A|fc=1:VOLKSWAGEN_AAT_CABIN
-  - 746.7B0.22260C|fc=1:VOLKSWAGEN_CLIMATE_FR_L_DEFL_T
-  - 746.7B0.22260D|fc=1:VOLKSWAGEN_CLIMATE_FR_R_DEFL_T
-  - 746.7B0.222611|fc=1:VOLKSWAGEN_CLIMATE_LEG_DEFL_T
-  - 746.7B0.222612|fc=1:VOLKSWAGEN_CLIMATE_T_AFTER_EVAP,VOLKSWAGEN_HVAC_EVAP_T
+  - 746.7B0.22260C|fc=1:VOLKSWAGEN_CLIMATE_FR_L_DEFL_T,VOLKSWAGEN_FRONT_LEFT_DEFLECTOR_T
+  - 746.7B0.22260D|fc=1:VOLKSWAGEN_CLIMATE_FR_R_DEFL_T,VOLKSWAGEN_FRONT_RIGHT_DEFLECTOR_T
+  - 746.7B0.222611|fc=1:VOLKSWAGEN_CLIMATE_LEG_DEFL_T,VOLKSWAGEN_LEG_DEFLECTOR_T
+  - 746.7B0.222612|fc=1:VOLKSWAGEN_CLIMATE_T_AFTER_EVAP,VOLKSWAGEN_HVAC_EVAP_T,VOLKSWAGEN_T_AFTER_EVAPORATOR
   - 746.7B0.222613|fc=1:VOLKSWAGEN_CABIN_T,VOLKSWAGEN_HVAC_IAT
   - 746.7B0.22261E|fc=1:VOLKSWAGEN_RECIRC_FLAP_ACT_PCT,VOLKSWAGEN_RECIRC_FLAP_ACT_STEPS
   - 746.7B0.22261F|fc=1:VOLKSWAGEN_RECIRC_FLAP_CMD_STEPS
   - 746.7B0.222620|fc=1:VOLKSWAGEN_RECIRC_FLAP_STOP_FRESH
   - 746.7B0.222621|fc=1:VOLKSWAGEN_RECIRC_FLAP_STOP_RECIRC
-  - 746.7B0.222622|fc=1:VOLKSWAGEN_CLIMATE_FR_L_T_FLP_ACT_VALUE
-  - 746.7B0.222626|fc=1:VOLKSWAGEN_CLIMATE_FR_R_T_FLP_ACT_VALUE
+  - 746.7B0.222622|fc=1:VOLKSWAGEN_CLIMATE_FR_L_T_FLP_ACT_VALUE,VOLKSWAGEN_FRONT_LEFT_T_FLAP_ACTUAL_VALUE
+  - 746.7B0.222626|fc=1:VOLKSWAGEN_CLIMATE_FR_R_T_FLP_ACT_VALUE,VOLKSWAGEN_FRONT_RIGHT_T_FLAP_ACTUAL_VALUE
   - 746.7B0.2226ED|fc=1:VOLKSWAGEN_AIR_POLUTION,VOLKSWAGEN_CLIMATE_AIR_POLUTION_LVL
   - 746.7B0.22482B|fc=1:VOLKSWAGEN_CLIMATE_A_C_CLCH
   "767":
-  - 767.7D1.220838|fc=1:VOLKSWAGEN_ECALL_SOC,VOLKSWAGEN_ECALL_STATUS
+  - 767.7D1.220838|fc=1:VOLKSWAGEN_ECALL_BATTERY_CHARGE_STATUS,VOLKSWAGEN_ECALL_SOC,VOLKSWAGEN_ECALL_STATUS
   - 767.7D1.222431|fc=1:VOLKSWAGEN_GPS_SATS_TRACKED,VOLKSWAGEN_GPS_SATS_VISIBLE
   "7DF":
   - 7DF.0134
@@ -136,6 +136,7 @@ supported_commands_by_ecu:
   - 7E0.22105C
   - 7E0.22105E
   - 7E0.2210F9
+  - 7E0.221151:VOLKSWAGEN_EM_RPM_1,VOLKSWAGEN_MISFIRES__CYL__4
   - 7E0.2211B2
   - 7E0.2211BA:VOLKSWAGEN_OIL_LEVEL
   - 7E0.2211C4:VOLKSWAGEN_OIL_MAX
@@ -190,10 +191,9 @@ supported_commands_by_ecu:
   - 7E0.7E8.221131
   - 7E0.7E8.221139:VOLKSWAGEN_MEAN_INJ_QUANTITY
   - 7E0.7E8.22113F:VOLKSWAGEN_FUEL_CONS
-  - 7E0.7E8.221148
-  - 7E0.7E8.221149
+  - 7E0.7E8.221148:VOLKSWAGEN_MISFIRES_1000REV_C3
+  - 7E0.7E8.221149:VOLKSWAGEN_MISFIRES_1000REV_C4
   - 7E0.7E8.22114C
-  - 7E0.7E8.221151:VOLKSWAGEN_EM_RPM_1
   - 7E0.7E8.221153:VOLKSWAGEN_EM_TORQ_1
   - 7E0.7E8.221158:VOLKSWAGEN_MAX_DCHA_CUR_2
   - 7E0.7E8.221159:VOLKSWAGEN_MAX_CHA_CUR_2
@@ -248,7 +248,6 @@ supported_commands_by_ecu:
   - 0142:VPWR
   - 0149:APP_D
   - 7E1.22101A:VOLKSWAGEN_ODO_TCM_2
-  - 7E1.223841:VOLKSWAGEN_ODO_TCM_1
   - 7E1.223887:VOLKSWAGEN_ODO_TCM_2_HD
   - 7E1.7E9.0104
   - 7E1.7E9.0105
@@ -259,7 +258,7 @@ supported_commands_by_ecu:
   - 7E1.7E9.2210AF
   - 7E1.7E9.2210B0
   - 7E1.7E9.222104:VOLKSWAGEN_ATF_T
-  - 7E1.7E9.223841
+  - 7E1.7E9.223841:VOLKSWAGEN_ODO_TCM_1,VOLKSWAGEN_ODO_V1
 unsupported_commands_by_ecu:
   "70B":
   - 70B.2218A0|fc=1:VOLKSWAGEN_TID_1,VOLKSWAGEN_TPOS_1,VOLKSWAGEN_TPS_1,VOLKSWAGEN_TPW_1,VOLKSWAGEN_TP_1,VOLKSWAGEN_TP_FR,VOLKSWAGEN_TT_1
@@ -300,7 +299,7 @@ unsupported_commands_by_ecu:
   - 713.77D.221802|fc=1:VOLKSWAGEN_RL_VSS,VOLKSWAGEN_RL_VSS_V2
   - 713.77D.221803|fc=1:VOLKSWAGEN_RR_VSS,VOLKSWAGEN_RR_VSS_V2
   - 713.77D.221808|fc=1:VOLKSWAGEN_HDC_ACTIVE,VOLKSWAGEN_HDC_INCLINE
-  - 713.77D.22180C|fc=1:VOLKSWAGEN_EDL_ACTIVE,VOLKSWAGEN_EDL_FR_L_BRAKE_T,VOLKSWAGEN_EDL_FR_R_BRAKE_T,VOLKSWAGEN_EDL_RR_L_BRAKE_T,VOLKSWAGEN_EDL_RR_R_BRAKE_T
+  - 713.77D.22180C|fc=1:VOLKSWAGEN_EDIFF_LOCK_FL_BRAKE_T,VOLKSWAGEN_EDIFF_LOCK_FR_BRAKE_T,VOLKSWAGEN_EDIFF_LOCK_RL_BRAKE_T,VOLKSWAGEN_EDIFF_LOCK_RR_BRAKE_T,VOLKSWAGEN_EDL_ACTIVE,VOLKSWAGEN_EDL_FR_L_BRAKE_T,VOLKSWAGEN_EDL_FR_R_BRAKE_T,VOLKSWAGEN_EDL_RR_L_BRAKE_T,VOLKSWAGEN_EDL_RR_R_BRAKE_T
   - 713.77D.22180E|fc=1:VOLKSWAGEN_BDD_ACTIVE,VOLKSWAGEN_BDD_ODO
   - 713.77D.221816|fc=1:VOLKSWAGEN_AIR_GAB_VACUUM_SNS,VOLKSWAGEN_BRAKE_P_SNS
   - 713.77D.221821|fc=1:VOLKSWAGEN_TPMS_AVAIL,VOLKSWAGEN_TPMS_FR_L_FLAT_TIRE_IND,VOLKSWAGEN_TPMS_FR_L_TIRE_P_DIFF_IND,VOLKSWAGEN_TPMS_FR_R_FLAT_TIRE_IND,VOLKSWAGEN_TPMS_FR_R_TIRE_P_DIFF_IND,VOLKSWAGEN_TPMS_ODO_RDG_AT_FOURTH_TO_LAST_WARN,VOLKSWAGEN_TPMS_ODO_RDG_AT_LAST_ADAPT,VOLKSWAGEN_TPMS_ODO_RDG_AT_LAST_WARN,VOLKSWAGEN_TPMS_ODO_RDG_AT_NEXT_TO_LAST_WARN,VOLKSWAGEN_TPMS_ODO_RDG_AT_THIRD_TO_LAST_WARN,VOLKSWAGEN_TPMS_ODO_RDG_FOUR_ADAPTATIONS_AGO,VOLKSWAGEN_TPMS_ODO_RDG_THREE_ADAPTATIONS_AGO,VOLKSWAGEN_TPMS_ODO_RDG_TWO_ADAPTATIONS_AGO,VOLKSWAGEN_TPMS_RR_L_FLAT_TIRE_IND,VOLKSWAGEN_TPMS_RR_L_TIRE_P_DIFF_IND,VOLKSWAGEN_TPMS_RR_R_FLAT_TIRE_IND,VOLKSWAGEN_TPMS_RR_R_TIRE_P_DIFF_IND
@@ -314,8 +313,8 @@ unsupported_commands_by_ecu:
   - '714.221014'
   - 714.22202F:VOLKSWAGEN_EOT
   - 714.222203:VOLKSWAGEN_ODO,VOLKSWAGEN_ODO_DASH
-  - 714.222294:VOLKSWAGEN_RANGE
-  - 714.22229A:VOLKSWAGEN_FLV
+  - 714.222294:VOLKSWAGEN_DTE,VOLKSWAGEN_RANGE
+  - 714.22229A:VOLKSWAGEN_FLI,VOLKSWAGEN_FLV
   - 714.2222B0:VOLKSWAGEN_FLI_VOL
   - 714.222613:VOLKSWAGEN_IAT
   - 714.77E.220530|fc=1:VOLKSWAGEN_TRIP_USE_SHORT
@@ -363,9 +362,9 @@ unsupported_commands_by_ecu:
   "746":
   - 746.2227C4|fc=1:VOLKSWAGEN_HVAC_INSIDE_HUM,VOLKSWAGEN_WNDSHLD_TEMP
   - 746.7B0.220800|fc=1:VOLKSWAGEN_AC_COMPRESSOR_PWR_ACT
-  - 746.7B0.22263D|fc=1:VOLKSWAGEN_CLIMATE_RR_DEFL_T
+  - 746.7B0.22263D|fc=1:VOLKSWAGEN_CLIMATE_RR_DEFL_T,VOLKSWAGEN_REAR_DEFLECTOR_T
   - 746.7B0.2227C3|fc=1:VOLKSWAGEN_HVAC_OUTSIDE_HUM
-  - 746.7B0.2227D6
+  - 746.7B0.2227D6|fc=1:VOLKSWAGEN_AC_COMPRESSOR_POWER_CONSUMPTION
   - 746.7B0.2242DB|fc=1:VOLKSWAGEN_CO2_CONTENT_INTERIOR
   - 746.7B0.224EEF|fc=1:VOLKSWAGEN_AC_REFRIG_P_SENS1,VOLKSWAGEN_AC_REFRIG_T_SENS1,VOLKSWAGEN_AC_REFRIG_T_SENS1_INT
   - 746.7B0.22F449|fc=1:VOLKSWAGEN_APP_D
@@ -376,6 +375,7 @@ unsupported_commands_by_ecu:
   "7E0":
   - 7E0.22114E
   - 7E0.22114F
+  - 7E0.221152:VOLKSWAGEN_EM_RPM_2,VOLKSWAGEN_MISFIRES__CYL__2
   - 7E0.221156
   - 7E0.22115E
   - 7E0.2211F6
@@ -400,12 +400,11 @@ unsupported_commands_by_ecu:
   - 7E0.7E8.221114
   - 7E0.7E8.221125
   - 7E0.7E8.221128
-  - 7E0.7E8.221146
-  - 7E0.7E8.221147
-  - 7E0.7E8.22114A
+  - 7E0.7E8.221146:VOLKSWAGEN_MISFIRES_TOTAL
+  - 7E0.7E8.221147:VOLKSWAGEN_MISFIRES_1000REV_C1
+  - 7E0.7E8.22114A:VOLKSWAGEN_MISFIRES_1000REV_C2
   - 7E0.7E8.22114B
-  - 7E0.7E8.221150
-  - 7E0.7E8.221152:VOLKSWAGEN_EM_RPM_2
+  - 7E0.7E8.221150:VOLKSWAGEN_MISFIRES_C3
   - 7E0.7E8.221154:VOLKSWAGEN_EM_TORQ_2
   - 7E0.7E8.221155:VOLKSWAGEN_EM_TORQ_3
   - 7E0.7E8.221156:VOLKSWAGEN_HVBAT_SOC_V2
@@ -433,7 +432,7 @@ unsupported_commands_by_ecu:
   - 7E0.7E8.221474:VOLKSWAGEN_INJ_2_RAIL_P_CAL_PT_2_1474
   - 7E0.7E8.221479:VOLKSWAGEN_INJ_7_RAIL_P_CAL_PT_3
   - 7E0.7E8.22147A:VOLKSWAGEN_INJ_2_RAIL_P_CAL_PT_3_147A
-  - 7E0.7E8.2214B4
+  - 7E0.7E8.2214B4:VOLKSWAGEN_FUEL_LEVEL_INPUT_V1
   - 7E0.7E8.2214B6
   - 7E0.7E8.2214B8
   - 7E0.7E8.2214B9
