--- a/tests/test_cases/2021/commands/710.222A0A.yaml
+++ b/tests/test_cases/2021/commands/710.222A0A.yaml
@@ -1,8 +1,8 @@
 command_id: 710.222A0A
 test_cases:
 - expected_values:
-    VOLKSWAGEN_SSB_SENSOR_T: 14
+    VOLKSWAGEN_BAT_T: 14
   response: 77A04622A0A36
 - expected_values:
-    VOLKSWAGEN_SSB_SENSOR_T: 47
+    VOLKSWAGEN_BAT_T: 47
   response: 77A04622A0A57
