--- a/tests/test_cases/2021/commands/746.7B0.22260C|fc=1.yaml
+++ b/tests/test_cases/2021/commands/746.7B0.22260C|fc=1.yaml
@@ -2,7 +2,9 @@ command_id: 746.7B0.22260C|fc=1
 test_cases:
 - expected_values:
     VOLKSWAGEN_CLIMATE_FR_L_DEFL_T: 0
+    VOLKSWAGEN_FRONT_LEFT_DEFLECTOR_T: 0
   response: 7B00462260C00
 - expected_values:
     VOLKSWAGEN_CLIMATE_FR_L_DEFL_T: 52.281
+    VOLKSWAGEN_FRONT_LEFT_DEFLECTOR_T: 52.33333
   response: 7B00462260C9D
