--- a/tests/test_cases/2021/commands/746.7B0.222612|fc=1.yaml
+++ b/tests/test_cases/2021/commands/746.7B0.222612|fc=1.yaml
@@ -2,7 +2,9 @@ command_id: 746.7B0.222612|fc=1
 test_cases:
 - expected_values:
     VOLKSWAGEN_CLIMATE_T_AFTER_EVAP: 0
+    VOLKSWAGEN_T_AFTER_EVAPORATOR: 0
   response: 7B00462261200
 - expected_values:
     VOLKSWAGEN_CLIMATE_T_AFTER_EVAP: -0.333
+    VOLKSWAGEN_T_AFTER_EVAPORATOR: -0.33333
   response: 7B004622612FF
