--- a/tests/test_cases/2021/commands/746.7B0.222626|fc=1.yaml
+++ b/tests/test_cases/2021/commands/746.7B0.222626|fc=1.yaml
@@ -2,10 +2,13 @@ command_id: 746.7B0.222626|fc=1
 test_cases:
 - expected_values:
     VOLKSWAGEN_CLIMATE_FR_R_T_FLP_ACT_VALUE: 0
+    VOLKSWAGEN_FRONT_RIGHT_T_FLAP_ACTUAL_VALUE: 0
   response: 7B006622626001500
 - expected_values:
     VOLKSWAGEN_CLIMATE_FR_R_T_FLP_ACT_VALUE: 100
+    VOLKSWAGEN_FRONT_RIGHT_T_FLAP_ACTUAL_VALUE: 100
   response: 7B00662262600E7C8
 - expected_values:
     VOLKSWAGEN_CLIMATE_FR_R_T_FLP_ACT_VALUE: 100
+    VOLKSWAGEN_FRONT_RIGHT_T_FLAP_ACTUAL_VALUE: 100
   response: 7B00662262600E8C8
