--- a/tests/test_cases/2021/commands/7E1.7E9.223841.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.223841.yaml
@@ -1,17 +1,22 @@
-command_id: 7E1.223841
+command_id: 7E1.7E9.223841
 test_cases:
 - expected_values:
     VOLKSWAGEN_ODO_TCM_1: 787200
+    VOLKSWAGEN_ODO_V1: 19968
   response: 7E90762384100030C00
 - expected_values:
     VOLKSWAGEN_ODO_TCM_1: 693504
+    VOLKSWAGEN_ODO_V1: 976742.4
   response: 7E90762384100950A00
 - expected_values:
     VOLKSWAGEN_ODO_TCM_1: 786433
+    VOLKSWAGEN_ODO_V1: 1678028.8
   response: 7E90762384101000C00
 - expected_values:
     VOLKSWAGEN_ODO_TCM_1: 786178
+    VOLKSWAGEN_ODO_V1: 5026892.8
   response: 7E90762384102FF0B00
 - expected_values:
     VOLKSWAGEN_ODO_TCM_1: 788735
+    VOLKSWAGEN_ODO_V1: 427871744
   response: 7E907623841FF080C00
