--- a/tests/test_cases/2022/command_support.yaml
+++ b/tests/test_cases/2022/command_support.yaml
@@ -1,13 +1,13 @@
 model_year: 2022
 supported_commands_by_ecu:
   "710":
-  - 710.222A0A:VOLKSWAGEN_ODO_2,VOLKSWAGEN_SSB_SENSOR_T
+  - 710.222A0A:VOLKSWAGEN_BAT_T,VOLKSWAGEN_ODO_2,VOLKSWAGEN_ODO_V2
   - 710.77A.222A00|fc=1:VOLKSWAGEN_SSB_VT
   - 710.77A.222A07|fc=1:VOLKSWAGEN_BAT_V_2A07,VOLKSWAGEN_SSB_V
   - 710.77A.222A09|fc=1:VOLKSWAGEN_BAT_I,VOLKSWAGEN_SSB_C
-  - 710.77A.222A0B|fc=1:VOLKSWAGEN_BAT_T
+  - 710.77A.222A0B|fc=1:VOLKSWAGEN_BAT_T_V2
   - 710.77A.222A0C|fc=1:VOLKSWAGEN_BAT_SOC,VOLKSWAGEN_SSB_SOC
-  - 710.77A.222A0E|fc=1:VOLKSWAGEN_BAT_INT_R,VOLKSWAGEN_SSB_R
+  - 710.77A.222A0E|fc=1:VOLKSWAGEN_BAT_INT_R,VOLKSWAGEN_SSB_R,VOLKSWAGEN_SSB_RES_INT
   - 710.77A.222A0F|fc=1:VOLKSWAGEN_USE_BAT_CHG
   - 710.77A.222A10|fc=1:VOLKSWAGEN_BAT_V_AT_REST
   - 710.77A.222A61|fc=1:VOLKSWAGEN_SSB_TOTAL_CHARGE,VOLKSWAGEN_SSB_TOTAL_DISCHARGE
@@ -16,21 +16,21 @@ supported_commands_by_ecu:
   "746":
   - 746.7B0.222603|fc=1:VOLKSWAGEN_CLIMATE_A_C_COMP_SPD
   - 746.7B0.222604|fc=1:VOLKSWAGEN_CLIMATE_A_C_COMP_LOAD,VOLKSWAGEN_HVAC_AC_LOAD
-  - 746.7B0.222605|fc=1:VOLKSWAGEN_CLIMATE_REFRIG_P
+  - 746.7B0.222605|fc=1:VOLKSWAGEN_CLIMATE_REFRIG_P,VOLKSWAGEN_REFRIGERANT_PRESSURE
   - 746.7B0.222606|fc=1:VOLKSWAGEN_CLIMATE_RAD_FAN_ACT_DUTY,VOLKSWAGEN_HVAC_FAN1_ACT,VOLKSWAGEN_HVAC_FAN2_ACT
   - 746.7B0.222607|fc=1:VOLKSWAGEN_CLIMATE_RAD_FAN_CMD_DUTY,VOLKSWAGEN_HVAC_FAN_CMD
-  - 746.7B0.222609|fc=1:VOLKSWAGEN_AAT_V2,VOLKSWAGEN_HVAC_OUTSIDE_T
+  - 746.7B0.222609|fc=1:VOLKSWAGEN_AAT_FROMCABIN,VOLKSWAGEN_AAT_V2,VOLKSWAGEN_HVAC_OUTSIDE_T
   - 746.7B0.22260A|fc=1:VOLKSWAGEN_AAT_CABIN
-  - 746.7B0.22260C|fc=1:VOLKSWAGEN_CLIMATE_FR_L_DEFL_T
-  - 746.7B0.22260D|fc=1:VOLKSWAGEN_CLIMATE_FR_R_DEFL_T
-  - 746.7B0.222612|fc=1:VOLKSWAGEN_CLIMATE_T_AFTER_EVAP,VOLKSWAGEN_HVAC_EVAP_T
+  - 746.7B0.22260C|fc=1:VOLKSWAGEN_CLIMATE_FR_L_DEFL_T,VOLKSWAGEN_FRONT_LEFT_DEFLECTOR_T
+  - 746.7B0.22260D|fc=1:VOLKSWAGEN_CLIMATE_FR_R_DEFL_T,VOLKSWAGEN_FRONT_RIGHT_DEFLECTOR_T
+  - 746.7B0.222612|fc=1:VOLKSWAGEN_CLIMATE_T_AFTER_EVAP,VOLKSWAGEN_HVAC_EVAP_T,VOLKSWAGEN_T_AFTER_EVAPORATOR
   - 746.7B0.222613|fc=1:VOLKSWAGEN_CABIN_T,VOLKSWAGEN_HVAC_IAT
   - 746.7B0.22261E|fc=1:VOLKSWAGEN_RECIRC_FLAP_ACT_PCT,VOLKSWAGEN_RECIRC_FLAP_ACT_STEPS
   - 746.7B0.22261F|fc=1:VOLKSWAGEN_RECIRC_FLAP_CMD_STEPS
   - 746.7B0.222620|fc=1:VOLKSWAGEN_RECIRC_FLAP_STOP_FRESH
   - 746.7B0.222621|fc=1:VOLKSWAGEN_RECIRC_FLAP_STOP_RECIRC
-  - 746.7B0.222622|fc=1:VOLKSWAGEN_CLIMATE_FR_L_T_FLP_ACT_VALUE
-  - 746.7B0.222626|fc=1:VOLKSWAGEN_CLIMATE_FR_R_T_FLP_ACT_VALUE
+  - 746.7B0.222622|fc=1:VOLKSWAGEN_CLIMATE_FR_L_T_FLP_ACT_VALUE,VOLKSWAGEN_FRONT_LEFT_T_FLAP_ACTUAL_VALUE
+  - 746.7B0.222626|fc=1:VOLKSWAGEN_CLIMATE_FR_R_T_FLP_ACT_VALUE,VOLKSWAGEN_FRONT_RIGHT_T_FLAP_ACTUAL_VALUE
   - 746.7B0.2226ED|fc=1:VOLKSWAGEN_AIR_POLUTION,VOLKSWAGEN_CLIMATE_AIR_POLUTION_LVL
   - 746.7B0.22F449|fc=1:VOLKSWAGEN_APP_D
   "7E0":
@@ -79,12 +79,12 @@ supported_commands_by_ecu:
   - 7E0.012F:FLI
   - 7E0.0145:TP_R
   - 7E0.0147:TP_B
+  - 7E0.221151:VOLKSWAGEN_EM_RPM_1,VOLKSWAGEN_MISFIRES__CYL__4
+  - 7E0.221152:VOLKSWAGEN_EM_RPM_2,VOLKSWAGEN_MISFIRES__CYL__2
   - 7E0.2211BA:VOLKSWAGEN_OIL_LEVEL
   - 7E0.7E8.22028D:VOLKSWAGEN_ECU_TEMP
   - 7E0.7E8.221004:VOLKSWAGEN_AAT_V3
   - 7E0.7E8.2210E0:VOLKSWAGEN_ODO_2_V3,VOLKSWAGEN_ODO_V4
-  - 7E0.7E8.221151:VOLKSWAGEN_EM_RPM_1
-  - 7E0.7E8.221152:VOLKSWAGEN_EM_RPM_2
   - 7E0.7E8.221158:VOLKSWAGEN_MAX_DCHA_CUR_2
   - 7E0.7E8.221159:VOLKSWAGEN_MAX_CHA_CUR_2
   - 7E0.7E8.221160:VOLKSWAGEN_ODO_HD
@@ -107,11 +107,11 @@ supported_commands_by_ecu:
   - 0142:VPWR
   - 0149:APP_D
   - 7E1.22101A:VOLKSWAGEN_ODO_TCM_2
-  - 7E1.223841:VOLKSWAGEN_ODO_TCM_1
   - 7E1.223887:VOLKSWAGEN_ODO_TCM_2_HD
   - 7E1.7E9.221001:VOLKSWAGEN_TIRE_FR_SPD_V2
   - 7E1.7E9.221004:VOLKSWAGEN_TIRE_RL_SPD_V2
   - 7E1.7E9.222104:VOLKSWAGEN_ATF_T
+  - 7E1.7E9.223841:VOLKSWAGEN_ODO_TCM_1,VOLKSWAGEN_ODO_V1
 unsupported_commands_by_ecu:
   "70B":
   - 70B.2218A0|fc=1:VOLKSWAGEN_TID_1,VOLKSWAGEN_TPOS_1,VOLKSWAGEN_TPS_1,VOLKSWAGEN_TPW_1,VOLKSWAGEN_TP_1,VOLKSWAGEN_TP_FR,VOLKSWAGEN_TT_1
@@ -141,8 +141,8 @@ unsupported_commands_by_ecu:
   "714":
   - 714.22202F:VOLKSWAGEN_EOT
   - 714.222203:VOLKSWAGEN_ODO,VOLKSWAGEN_ODO_DASH
-  - 714.222294:VOLKSWAGEN_RANGE
-  - 714.22229A:VOLKSWAGEN_FLV
+  - 714.222294:VOLKSWAGEN_DTE,VOLKSWAGEN_RANGE
+  - 714.22229A:VOLKSWAGEN_FLI,VOLKSWAGEN_FLV
   - 714.2222B0:VOLKSWAGEN_FLI_VOL
   - 714.222613:VOLKSWAGEN_IAT
   - 714.77E.220530|fc=1:VOLKSWAGEN_TRIP_USE_SHORT
@@ -189,7 +189,7 @@ unsupported_commands_by_ecu:
   "746":
   - 746.2227C4|fc=1:VOLKSWAGEN_HVAC_INSIDE_HUM,VOLKSWAGEN_WNDSHLD_TEMP
   - 746.7B0.220800|fc=1:VOLKSWAGEN_AC_COMPRESSOR_PWR_ACT
-  - 746.7B0.22263D|fc=1:VOLKSWAGEN_CLIMATE_RR_DEFL_T
+  - 746.7B0.22263D|fc=1:VOLKSWAGEN_CLIMATE_RR_DEFL_T,VOLKSWAGEN_REAR_DEFLECTOR_T
   - 746.7B0.2227C3|fc=1:VOLKSWAGEN_HVAC_OUTSIDE_HUM
   - 746.7B0.2242DB|fc=1:VOLKSWAGEN_CO2_CONTENT_INTERIOR
   - 746.7B0.224EEF|fc=1:VOLKSWAGEN_AC_REFRIG_P_SENS1,VOLKSWAGEN_AC_REFRIG_T_SENS1,VOLKSWAGEN_AC_REFRIG_T_SENS1_INT
