--- a/tests/test_cases/2022/commands/710.222A0A.yaml
+++ b/tests/test_cases/2022/commands/710.222A0A.yaml
@@ -1,8 +1,8 @@
 command_id: 710.222A0A
 test_cases:
 - expected_values:
-    VOLKSWAGEN_SSB_SENSOR_T: 13
+    VOLKSWAGEN_BAT_T: 13
   response: 77A04622A0A35
 - expected_values:
-    VOLKSWAGEN_SSB_SENSOR_T: 45
+    VOLKSWAGEN_BAT_T: 45
   response: 77A04622A0A55
