--- a/tests/test_cases/2022/commands/710.77A.222A0E|fc=1.yaml
+++ b/tests/test_cases/2022/commands/710.77A.222A0E|fc=1.yaml
@@ -3,12 +3,15 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_BAT_INT_R: 5.2
     VOLKSWAGEN_SSB_R: 5.2
+    VOLKSWAGEN_SSB_RES_INT: 5.2
   response: 77A04622A0E1A
 - expected_values:
     VOLKSWAGEN_BAT_INT_R: 5.4
     VOLKSWAGEN_SSB_R: 5.4
+    VOLKSWAGEN_SSB_RES_INT: 5.4
   response: 77A04622A0E1B
 - expected_values:
     VOLKSWAGEN_BAT_INT_R: 5.6
     VOLKSWAGEN_SSB_R: 5.6
+    VOLKSWAGEN_SSB_RES_INT: 5.6
   response: 77A04622A0E1C
