--- a/tests/test_cases/2022/commands/746.7B0.22260C|fc=1.yaml
+++ b/tests/test_cases/2022/commands/746.7B0.22260C|fc=1.yaml
@@ -2,22 +2,29 @@ command_id: 746.7B0.22260C|fc=1
 test_cases:
 - expected_values:
     VOLKSWAGEN_CLIMATE_FR_L_DEFL_T: 35.964
+    VOLKSWAGEN_FRONT_LEFT_DEFLECTOR_T: 36
   response: 7B00462260C6C
 - expected_values:
     VOLKSWAGEN_CLIMATE_FR_L_DEFL_T: 36.63
+    VOLKSWAGEN_FRONT_LEFT_DEFLECTOR_T: 36.66667
   response: 7B00462260C6E
 - expected_values:
     VOLKSWAGEN_CLIMATE_FR_L_DEFL_T: 37.962
+    VOLKSWAGEN_FRONT_LEFT_DEFLECTOR_T: 38
   response: 7B00462260C72
 - expected_values:
     VOLKSWAGEN_CLIMATE_FR_L_DEFL_T: 38.628
+    VOLKSWAGEN_FRONT_LEFT_DEFLECTOR_T: 38.66667
   response: 7B00462260C74
 - expected_values:
     VOLKSWAGEN_CLIMATE_FR_L_DEFL_T: 39.294
+    VOLKSWAGEN_FRONT_LEFT_DEFLECTOR_T: 39.33333
   response: 7B00462260C76
 - expected_values:
     VOLKSWAGEN_CLIMATE_FR_L_DEFL_T: 39.96
+    VOLKSWAGEN_FRONT_LEFT_DEFLECTOR_T: 40
   response: 7B00462260C78
 - expected_values:
     VOLKSWAGEN_CLIMATE_FR_L_DEFL_T: 40.626
+    VOLKSWAGEN_FRONT_LEFT_DEFLECTOR_T: 40.66667
   response: 7B00462260C7A
