--- a/tests/test_cases/2022/commands/746.7B0.22260D|fc=1.yaml
+++ b/tests/test_cases/2022/commands/746.7B0.22260D|fc=1.yaml
@@ -2,16 +2,21 @@ command_id: 746.7B0.22260D|fc=1
 test_cases:
 - expected_values:
     VOLKSWAGEN_CLIMATE_FR_R_DEFL_T: 36.63
+    VOLKSWAGEN_FRONT_RIGHT_DEFLECTOR_T: 36.66667
   response: 7B00462260D6E
 - expected_values:
     VOLKSWAGEN_CLIMATE_FR_R_DEFL_T: 37.296
+    VOLKSWAGEN_FRONT_RIGHT_DEFLECTOR_T: 37.33333
   response: 7B00462260D70
 - expected_values:
     VOLKSWAGEN_CLIMATE_FR_R_DEFL_T: 37.962
+    VOLKSWAGEN_FRONT_RIGHT_DEFLECTOR_T: 38
   response: 7B00462260D72
 - expected_values:
     VOLKSWAGEN_CLIMATE_FR_R_DEFL_T: 38.628
+    VOLKSWAGEN_FRONT_RIGHT_DEFLECTOR_T: 38.66667
   response: 7B00462260D74
 - expected_values:
     VOLKSWAGEN_CLIMATE_FR_R_DEFL_T: 39.294
+    VOLKSWAGEN_FRONT_RIGHT_DEFLECTOR_T: 39.33333
   response: 7B00462260D76
