--- a/tests/test_cases/2022/commands/746.7B0.222612|fc=1.yaml
+++ b/tests/test_cases/2022/commands/746.7B0.222612|fc=1.yaml
@@ -3,16 +3,20 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_CLIMATE_T_AFTER_EVAP: 0.333
     VOLKSWAGEN_HVAC_EVAP_T: 48
+    VOLKSWAGEN_T_AFTER_EVAPORATOR: 0.33333
   response: 7B00562261201E0
 - expected_values:
     VOLKSWAGEN_CLIMATE_T_AFTER_EVAP: 0.333
     VOLKSWAGEN_HVAC_EVAP_T: 49
+    VOLKSWAGEN_T_AFTER_EVAPORATOR: 0.33333
   response: 7B00562261201EA
 - expected_values:
     VOLKSWAGEN_CLIMATE_T_AFTER_EVAP: 0.333
     VOLKSWAGEN_HVAC_EVAP_T: 50
+    VOLKSWAGEN_T_AFTER_EVAPORATOR: 0.33333
   response: 7B00562261201F4
 - expected_values:
     VOLKSWAGEN_CLIMATE_T_AFTER_EVAP: 0.666
     VOLKSWAGEN_HVAC_EVAP_T: 52
+    VOLKSWAGEN_T_AFTER_EVAPORATOR: 0.66667
   response: 7B0056226120208
