--- a/tests/test_cases/2022/commands/746.7B0.222622|fc=1.yaml
+++ b/tests/test_cases/2022/commands/746.7B0.222622|fc=1.yaml
@@ -2,7 +2,9 @@ command_id: 746.7B0.222622|fc=1
 test_cases:
 - expected_values:
     VOLKSWAGEN_CLIMATE_FR_L_T_FLP_ACT_VALUE: 7.5
+    VOLKSWAGEN_FRONT_LEFT_T_FLAP_ACTUAL_VALUE: 7.5
   response: 7B006622622002D0F
 - expected_values:
     VOLKSWAGEN_CLIMATE_FR_L_T_FLP_ACT_VALUE: 22.5
+    VOLKSWAGEN_FRONT_LEFT_T_FLAP_ACTUAL_VALUE: 22.5
   response: 7B006622622004B2D
