--- a/tests/test_cases/2022/commands/7E0.221152.yaml
+++ b/tests/test_cases/2022/commands/7E0.221152.yaml
@@ -1,11 +1,14 @@
-command_id: 7E0.7E8.221152
+command_id: 7E0.221152
 test_cases:
 - expected_values:
     VOLKSWAGEN_EM_RPM_2: 1738.5
+    VOLKSWAGEN_MISFIRES__CYL__2: 3477
   response: 7E8056211520D95
 - expected_values:
     VOLKSWAGEN_EM_RPM_2: 1779.5
+    VOLKSWAGEN_MISFIRES__CYL__2: 3559
   response: 7E8056211520DE7
 - expected_values:
     VOLKSWAGEN_EM_RPM_2: 1805.5
+    VOLKSWAGEN_MISFIRES__CYL__2: 3611
   response: 7E8056211520E1B
