--- a/tests/test_cases/2023/command_support.yaml
+++ b/tests/test_cases/2023/command_support.yaml
@@ -2,9 +2,9 @@ model_year: 2023
 supported_commands_by_ecu:
   "710":
   - 710.77A.222A07|fc=1:VOLKSWAGEN_BAT_V_2A07,VOLKSWAGEN_SSB_V
-  - 710.77A.222A0B|fc=1:VOLKSWAGEN_BAT_T
+  - 710.77A.222A0B|fc=1:VOLKSWAGEN_BAT_T_V2
   - 710.77A.222A0C|fc=1:VOLKSWAGEN_BAT_SOC,VOLKSWAGEN_SSB_SOC
-  - 710.77A.222A0E|fc=1:VOLKSWAGEN_BAT_INT_R,VOLKSWAGEN_SSB_R
+  - 710.77A.222A0E|fc=1:VOLKSWAGEN_BAT_INT_R,VOLKSWAGEN_SSB_R,VOLKSWAGEN_SSB_RES_INT
   - 710.77A.222A0F|fc=1:VOLKSWAGEN_USE_BAT_CHG
   - 710.77A.222A10|fc=1:VOLKSWAGEN_BAT_V_AT_REST
   "7E0":
@@ -51,12 +51,12 @@ supported_commands_by_ecu:
   - 7E0.012F:FLI
   - 7E0.0131:CLR_DIST
   - 7E0.0142:VPWR
+  - 7E0.221151:VOLKSWAGEN_EM_RPM_1,VOLKSWAGEN_MISFIRES__CYL__4
+  - 7E0.221152:VOLKSWAGEN_EM_RPM_2,VOLKSWAGEN_MISFIRES__CYL__2
   - 7E0.2211BA:VOLKSWAGEN_OIL_LEVEL
   - 7E0.7E8.22028D:VOLKSWAGEN_ECU_TEMP
   - 7E0.7E8.221004:VOLKSWAGEN_AAT_V3
   - 7E0.7E8.2210E0:VOLKSWAGEN_ODO_2_V3,VOLKSWAGEN_ODO_V4
-  - 7E0.7E8.221151:VOLKSWAGEN_EM_RPM_1
-  - 7E0.7E8.221152:VOLKSWAGEN_EM_RPM_2
   - 7E0.7E8.221158:VOLKSWAGEN_MAX_DCHA_CUR_2
   - 7E0.7E8.221159:VOLKSWAGEN_MAX_CHA_CUR_2
   - 7E0.7E8.221160:VOLKSWAGEN_ODO_HD
@@ -79,10 +79,10 @@ supported_commands_by_ecu:
   - 0142:VPWR
   - 0149:APP_D
   - 7E1.22101A:VOLKSWAGEN_ODO_TCM_2
-  - 7E1.223841:VOLKSWAGEN_ODO_TCM_1
   - 7E1.223887:VOLKSWAGEN_ODO_TCM_2_HD
   - 7E1.7E9.221001:VOLKSWAGEN_TIRE_FR_SPD_V2
   - 7E1.7E9.221004:VOLKSWAGEN_TIRE_RL_SPD_V2
+  - 7E1.7E9.223841:VOLKSWAGEN_ODO_TCM_1,VOLKSWAGEN_ODO_V1
 unsupported_commands_by_ecu:
   "70B":
   - 70B.2218A0|fc=1:VOLKSWAGEN_TID_1,VOLKSWAGEN_TPOS_1,VOLKSWAGEN_TPS_1,VOLKSWAGEN_TPW_1,VOLKSWAGEN_TP_1,VOLKSWAGEN_TP_FR,VOLKSWAGEN_TT_1
@@ -90,7 +90,7 @@ unsupported_commands_by_ecu:
   - 70B.2218A2|fc=1:VOLKSWAGEN_TID_3,VOLKSWAGEN_TPOS_3,VOLKSWAGEN_TPS_3,VOLKSWAGEN_TPW_3,VOLKSWAGEN_TP_3,VOLKSWAGEN_TP_RL,VOLKSWAGEN_TT_3
   - 70B.2218A3|fc=1:VOLKSWAGEN_TID_4,VOLKSWAGEN_TPOS_4,VOLKSWAGEN_TPS_4,VOLKSWAGEN_TPW_4,VOLKSWAGEN_TP_4,VOLKSWAGEN_TP_RR,VOLKSWAGEN_TT_4
   "710":
-  - 710.222A0A:VOLKSWAGEN_ODO_2,VOLKSWAGEN_SSB_SENSOR_T
+  - 710.222A0A:VOLKSWAGEN_BAT_T,VOLKSWAGEN_ODO_2,VOLKSWAGEN_ODO_V2
   - 710.77A.222AB2|fc=1:VOLKSWAGEN_HVBAT_CAP,VOLKSWAGEN_HVBAT_E_MAX
   - 710.77A.222AB6|fc=1:VOLKSWAGEN_RANGE_V2
   - 710.77A.222AB7|fc=1:VOLKSWAGEN_AVG_CSMP_CAT0,VOLKSWAGEN_AVG_CSMP_CAT1,VOLKSWAGEN_AVG_CSMP_CAT2,VOLKSWAGEN_AVG_CSMP_CAT3,VOLKSWAGEN_AVG_CSMP_CAT4,VOLKSWAGEN_AVG_CSMP_CAT5,VOLKSWAGEN_AVG_CSMP_CAT6
@@ -108,8 +108,8 @@ unsupported_commands_by_ecu:
   "714":
   - 714.22202F:VOLKSWAGEN_EOT
   - 714.222203:VOLKSWAGEN_ODO,VOLKSWAGEN_ODO_DASH
-  - 714.222294:VOLKSWAGEN_RANGE
-  - 714.22229A:VOLKSWAGEN_FLV
+  - 714.222294:VOLKSWAGEN_DTE,VOLKSWAGEN_RANGE
+  - 714.22229A:VOLKSWAGEN_FLI,VOLKSWAGEN_FLV
   - 714.2222B0:VOLKSWAGEN_FLI_VOL
   - 714.222613:VOLKSWAGEN_IAT
   - 714.77E.220530|fc=1:VOLKSWAGEN_TRIP_USE_SHORT
