--- a/tests/test_cases/2023/commands/7E0.221151.yaml
+++ b/tests/test_cases/2023/commands/7E0.221151.yaml
@@ -1,5 +1,6 @@
-command_id: 7E0.7E8.221151
+command_id: 7E0.221151
 test_cases:
 - expected_values:
     VOLKSWAGEN_EM_RPM_1: 827.5
+    VOLKSWAGEN_MISFIRES__CYL__4: 1655
   response: '7E8056211510677'
