--- a/tests/test_cases/2023/commands/7E0.221152.yaml
+++ b/tests/test_cases/2023/commands/7E0.221152.yaml
@@ -1,5 +1,6 @@
-command_id: 7E0.7E8.221152
+command_id: 7E0.221152
 test_cases:
 - expected_values:
     VOLKSWAGEN_EM_RPM_2: 1600
+    VOLKSWAGEN_MISFIRES__CYL__2: 3200
   response: 7E8056211520C80
