Update command data for Volkswagen/T-Roc

--- a/tests/test_cases/2021/command_support.yaml
+++ b/tests/test_cases/2021/command_support.yaml
@@ -13,6 +13,8 @@ supported_commands_by_ecu:
   - 710.77A.222A0F|fc=1:VOLKSWAGEN_USE_BAT_CHG
   - 710.77A.222A10|fc=1:VOLKSWAGEN_BAT_V_AT_REST
   - 710.77A.222A61|fc=1:VOLKSWAGEN_SSB_TOTAL_CHARGE,VOLKSWAGEN_SSB_TOTAL_DISCHARGE
+  "712":
+  - 712.77C.221812|fc=1:VOLKSWAGEN_STEER_WHEEL_ANGLE
   "713":
   - 713.77D.221810|fc=1:VOLKSWAGEN_HYD_BRAKE_BOOST_ACTIVE
   "714":
@@ -228,6 +230,7 @@ supported_commands_by_ecu:
   - 7E0.7E8.2214CF
   - 7E0.7E8.2214D0
   - 7E0.7E8.2214D1
+  - 7E0.7E8.221515:VOLKSWAGEN_CAT_T_CALC
   - 7E0.7E8.221626
   - 7E0.7E8.22162D
   - 7E0.7E8.22179C
@@ -258,6 +261,7 @@ supported_commands_by_ecu:
   - 7E1.7E9.2210AF
   - 7E1.7E9.2210B0
   - 7E1.7E9.222104:VOLKSWAGEN_ATF_T
+  - 7E1.7E9.222110:VOLKSWAGEN_SPEC_TORQUE_TRANSINT
   - 7E1.7E9.223841:VOLKSWAGEN_ODO_TCM_1,VOLKSWAGEN_ODO_V1
 unsupported_commands_by_ecu:
   "70B":
@@ -298,6 +302,7 @@ unsupported_commands_by_ecu:
   - 713.77D.221801|fc=1:VOLKSWAGEN_FR_VSS,VOLKSWAGEN_FR_VSS_V2
   - 713.77D.221802|fc=1:VOLKSWAGEN_RL_VSS,VOLKSWAGEN_RL_VSS_V2
   - 713.77D.221803|fc=1:VOLKSWAGEN_RR_VSS,VOLKSWAGEN_RR_VSS_V2
+  - 713.77D.221804|fc=1:VOLKSWAGEN_STEER_WHEEL_ANGLE_ABS
   - 713.77D.221808|fc=1:VOLKSWAGEN_HDC_ACTIVE,VOLKSWAGEN_HDC_INCLINE
   - 713.77D.22180C|fc=1:VOLKSWAGEN_EDIFF_LOCK_FL_BRAKE_T,VOLKSWAGEN_EDIFF_LOCK_FR_BRAKE_T,VOLKSWAGEN_EDIFF_LOCK_RL_BRAKE_T,VOLKSWAGEN_EDIFF_LOCK_RR_BRAKE_T,VOLKSWAGEN_EDL_ACTIVE,VOLKSWAGEN_EDL_FR_L_BRAKE_T,VOLKSWAGEN_EDL_FR_R_BRAKE_T,VOLKSWAGEN_EDL_RR_L_BRAKE_T,VOLKSWAGEN_EDL_RR_R_BRAKE_T
   - 713.77D.22180E|fc=1:VOLKSWAGEN_BDD_ACTIVE,VOLKSWAGEN_BDD_ODO
@@ -400,10 +405,12 @@ unsupported_commands_by_ecu:
   - 7E0.7E8.221114
   - 7E0.7E8.221125
   - 7E0.7E8.221128
+  - 7E0.7E8.221135:VOLKSWAGEN_COOLANT_T
   - 7E0.7E8.221146:VOLKSWAGEN_MISFIRES_TOTAL
   - 7E0.7E8.221147:VOLKSWAGEN_MISFIRES_1000REV_C1
   - 7E0.7E8.22114A:VOLKSWAGEN_MISFIRES_1000REV_C2
   - 7E0.7E8.22114B
+  - 7E0.7E8.22114F:VOLKSWAGEN_MISFIRES_C1
   - 7E0.7E8.221150:VOLKSWAGEN_MISFIRES_C3
   - 7E0.7E8.221154:VOLKSWAGEN_EM_TORQ_2
   - 7E0.7E8.221155:VOLKSWAGEN_EM_TORQ_3
@@ -414,6 +421,7 @@ unsupported_commands_by_ecu:
   - 7E0.7E8.2211BB:VOLKSWAGEN_OIL_CRIT
   - 7E0.7E8.2211C1
   - 7E0.7E8.2211CE
+  - 7E0.7E8.221282:VOLKSWAGEN_EXHAUST_GAS_T_BEFORE_CATALYST
   - 7E0.7E8.22128A
   - 7E0.7E8.22128C
   - 7E0.7E8.2212FC
@@ -439,14 +447,18 @@ unsupported_commands_by_ecu:
   - 7E0.7E8.2214BA
   - 7E0.7E8.2214BB
   - 7E0.7E8.2214BE
+  - 7E0.7E8.2214CB:VOLKSWAGEN_GEAR_V2
+  - 7E0.7E8.2214F8:VOLKSWAGEN_AAT_V1
   - 7E0.7E8.22156F
   - 7E0.7E8.22166B
   - 7E0.7E8.22166C
   - 7E0.7E8.22166F
   - 7E0.7E8.221670
   - 7E0.7E8.222005:VOLKSWAGEN_BRAKE_BST_P
+  - 7E0.7E8.22201A:VOLKSWAGEN_EOT_CALC
   - 7E0.7E8.222061:VOLKSWAGEN_APP_POS1
   - 7E0.7E8.222062:VOLKSWAGEN_APP_POS2
+  - 7E0.7E8.222206:VOLKSWAGEN_FUEL_LEVEL_INPUT_V2
   - 7E0.7E8.2229D4:VOLKSWAGEN_ENG_TRQ_REQ_1
   - 7E0.7E8.22395E:VOLKSWAGEN_ENG_BRAKE_PUMP
   - 7E0.7E8.223DF8:VOLKSWAGEN_ENG_MOTOR_RPM
@@ -463,7 +475,12 @@ unsupported_commands_by_ecu:
   - 7E1.7E9.220805:VOLKSWAGEN_BRAKE_LIGHT_ON,VOLKSWAGEN_BRAKE_LIGHT_ON_VALID,VOLKSWAGEN_BRAKE_PRESSED,VOLKSWAGEN_BRAKE_PRESSED_VALID
   - 7E1.7E9.221002:VOLKSWAGEN_TIRE_FL_SPD_V2
   - 7E1.7E9.221003:VOLKSWAGEN_TIRE_RR_SPD_V2
+  - 7E1.7E9.222002:VOLKSWAGEN_ENGINE_TORQUE__AT
+  - 7E1.7E9.222102:VOLKSWAGEN_AT_INPUT_SPEED
+  - 7E1.7E9.222103:VOLKSWAGEN_AT_OUTPUT_SPEED
   - 7E1.7E9.22210F:VOLKSWAGEN_GEAR,VOLKSWAGEN_GEAR_SHFT
+  - 7E1.7E9.222131:VOLKSWAGEN_TORQUE_CONVERTER_SLIP
+  - 7E1.7E9.22704F:VOLKSWAGEN_ATF_MAX
   "7E5":
   - 7E5.221802
   - 7E5.22180C
