--- a/tests/test_cases/2021/commands/712.77C.221812|fc=1.yaml
+++ b/tests/test_cases/2021/commands/712.77C.221812|fc=1.yaml
@@ -1,5 +1,14 @@
 command_id: 712.77C.221812|fc=1
 test_cases:
 - expected_values:
+    VOLKSWAGEN_STEER_WHEEL_ANGLE: 7.125
+  response: 77C06621812003901
+- expected_values:
     VOLKSWAGEN_STEER_WHEEL_ANGLE: 116.25
   response: 77C0662181203A201
+- expected_values:
+    VOLKSWAGEN_STEER_WHEEL_ANGLE: -58.125
+  response: 77C06621812FE2F01
+- expected_values:
+    VOLKSWAGEN_STEER_WHEEL_ANGLE: -6.375
+  response: 77C06621812FFCD01
