--- a/tests/test_cases/2021/commands/7E1.7E9.222110.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.222110.yaml
@@ -3,3 +3,9 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_SPEC_TORQUE_TRANSINT: 12370
   response: '7E9056221103052'
+- expected_values:
+    VOLKSWAGEN_SPEC_TORQUE_TRANSINT: 40020
+  response: 7E9056221109C54
+- expected_values:
+    VOLKSWAGEN_SPEC_TORQUE_TRANSINT: 53330
+  response: 7E905622110D052
