--- a/tests/test_cases/2021/commands/7E1.7E9.222110.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.222110.yaml
@@ -7,5 +7,11 @@ test_cases:
     VOLKSWAGEN_SPEC_TORQUE_TRANSINT: 40020
   response: 7E9056221109C54
 - expected_values:
+    VOLKSWAGEN_SPEC_TORQUE_TRANSINT: 43090
+  response: 7E905622110A852
+- expected_values:
     VOLKSWAGEN_SPEC_TORQUE_TRANSINT: 53330
   response: 7E905622110D052
+- expected_values:
+    VOLKSWAGEN_SPEC_TORQUE_TRANSINT: 63570
+  response: 7E905622110F852
