--- a/tests/test_cases/2021/commands/7E0.7E8.221515.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.221515.yaml
@@ -1,5 +1,8 @@
 command_id: 7E0.7E8.221515
 test_cases:
 - expected_values:
+    VOLKSWAGEN_CAT_T_CALC: 265
+  response: 7E805621515003F
+- expected_values:
     VOLKSWAGEN_CAT_T_CALC: 103300
   response: 7E80562151550BE
