--- a/tests/test_cases/2021/commands/7E1.7E9.222110.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.222110.yaml
@@ -1,8 +1,8 @@
 command_id: 7E1.7E9.222110
 test_cases:
 - expected_values:
-    VOLKSWAGEN_SPEC_TORQUE_TRANSINT: 8275
-  response: '7E9056221102053'
+    VOLKSWAGEN_SPEC_TORQUE_TRANSINT: 3155
+  response: 7E9056221100C53
 - expected_values:
     VOLKSWAGEN_SPEC_TORQUE_TRANSINT: 12370
   response: '7E9056221103052'
