--- a/tests/test_cases/2021/commands/7E1.7E9.222110.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.222110.yaml
@@ -4,11 +4,11 @@ test_cases:
     VOLKSWAGEN_SPEC_TORQUE_TRANSINT: 3155
   response: 7E9056221100C53
 - expected_values:
-    VOLKSWAGEN_SPEC_TORQUE_TRANSINT: 12370
-  response: '7E9056221103052'
-- expected_values:
     VOLKSWAGEN_SPEC_TORQUE_TRANSINT: 26710
   response: '7E9056221106856'
+- expected_values:
+    VOLKSWAGEN_SPEC_TORQUE_TRANSINT: 58370
+  response: 7E905622110E402
 - expected_values:
     VOLKSWAGEN_SPEC_TORQUE_TRANSINT: 64595
   response: 7E905622110FC53
