--- a/tests/test_cases/2021/commands/7E0.7E8.22117E.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.22117E.yaml
@@ -1,6 +1,12 @@
 command_id: 7E0.7E8.22117E
 test_cases:
 - expected_values:
+    VOLKSWAGEN_PQ35_TURB_ACT_1_B1: 78.88
+  response: 7E80562117E1ED0
+- expected_values:
+    VOLKSWAGEN_PQ35_TURB_ACT_1_B1: 80.5
+  response: 7E80562117E1F72
+- expected_values:
     VOLKSWAGEN_PQ35_TURB_ACT_1_B1: 80.87
   response: 7E80562117E1F97
 - expected_values:
