--- a/tests/test_cases/2021/commands/7E0.7E8.221313.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.221313.yaml
@@ -1,6 +1,9 @@
 command_id: 7E0.7E8.221313
 test_cases:
 - expected_values:
+    VOLKSWAGEN_MQB_EGR_VALVE_2_B1_FLOW: 0
+  response: '7E8056213130000'
+- expected_values:
     VOLKSWAGEN_MQB_EGR_VALVE_2_B1_FLOW: 7.3
   response: '7E8056213130049'
 - expected_values:
@@ -9,3 +12,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_MQB_EGR_VALVE_2_B1_FLOW: 16.2
   response: 7E80562131300A2
+- expected_values:
+    VOLKSWAGEN_MQB_EGR_VALVE_2_B1_FLOW: 16.3
+  response: 7E80562131300A3
