--- a/tests/test_cases/2021/commands/7E0.7E8.221AC1.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.221AC1.yaml
@@ -9,3 +9,9 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_MQB_DPF_FUEL_CONSUMPTION_SINCE_LAST_REGEN: 9.65
   response: 7E805621AC103C5
+- expected_values:
+    VOLKSWAGEN_MQB_DPF_FUEL_CONSUMPTION_SINCE_LAST_REGEN: 9.77
+  response: 7E805621AC103D1
+- expected_values:
+    VOLKSWAGEN_MQB_DPF_FUEL_CONSUMPTION_SINCE_LAST_REGEN: 9.91
+  response: 7E805621AC103DF
