--- a/tests/test_cases/2021/commands/7E0.7E8.221AD5.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.221AD5.yaml
@@ -7,5 +7,11 @@ test_cases:
     VOLKSWAGEN_MQB_DPF_INLET_LAMBDA_VALUE: 1.812
   response: 7E805621AD50714
 - expected_values:
+    VOLKSWAGEN_MQB_DPF_INLET_LAMBDA_VALUE: 2.041
+  response: 7E805621AD507F9
+- expected_values:
     VOLKSWAGEN_MQB_DPF_INLET_LAMBDA_VALUE: 2.109
   response: 7E805621AD5083D
+- expected_values:
+    VOLKSWAGEN_MQB_DPF_INLET_LAMBDA_VALUE: 2.262
+  response: 7E805621AD508D6
