--- a/tests/test_cases/2021/commands/7E0.7E8.222AE1.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.222AE1.yaml
@@ -1,6 +1,12 @@
 command_id: 7E0.7E8.222AE1
 test_cases:
 - expected_values:
+    VOLKSWAGEN_MQB_EXHAUST_GAS_RECIRCULATION_2_FILTER_P_LOSS_MODELED: 0.2
+  response: 7E805622AE1138A
+- expected_values:
+    VOLKSWAGEN_MQB_EXHAUST_GAS_RECIRCULATION_2_FILTER_P_LOSS_MODELED: 19.9
+  response: 7E805622AE1144F
+- expected_values:
     VOLKSWAGEN_MQB_EXHAUST_GAS_RECIRCULATION_2_FILTER_P_LOSS_MODELED: 20.7
   response: 7E805622AE11457
 - expected_values:
