--- a/tests/test_cases/2021/commands/7E1.7E9.221009.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.221009.yaml
@@ -1,8 +1,14 @@
 command_id: 7E1.7E9.221009
 test_cases:
 - expected_values:
+    VOLKSWAGEN_MQB_DQ250_SPD_OUTPUT: 0
+  response: '7E9056210090000'
+- expected_values:
     VOLKSWAGEN_MQB_DQ250_SPD_OUTPUT: 345
   response: '7E9056210095901'
 - expected_values:
     VOLKSWAGEN_MQB_DQ250_SPD_OUTPUT: 141
   response: 7E9056210098D00
+- expected_values:
+    VOLKSWAGEN_MQB_DQ250_SPD_OUTPUT: 183
+  response: 7E905621009B700
