--- a/tests/test_cases/2021/commands/7E1.7E9.221017.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.221017.yaml
@@ -1,8 +1,14 @@
 command_id: 7E1.7E9.221017
 test_cases:
 - expected_values:
+    VOLKSWAGEN_PQ35_ROAD_RESISTANCE: -3.463
+  response: '7E90462101771'
+- expected_values:
     VOLKSWAGEN_PQ35_ROAD_RESISTANCE: 1.019
   response: '7E90462101783'
 - expected_values:
     VOLKSWAGEN_PQ35_ROAD_RESISTANCE: 2.015
   response: '7E90462101787'
+- expected_values:
+    VOLKSWAGEN_PQ35_ROAD_RESISTANCE: 3.011
+  response: 7E9046210178B
