--- a/tests/test_cases/2021/commands/7E1.7E9.22109E.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.22109E.yaml
@@ -6,3 +6,9 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_ENGAGED_POS_G5: 8.98
   response: 7E90562109E8203
+- expected_values:
+    VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_ENGAGED_POS_G5: 9.01
+  response: 7E90562109E8503
+- expected_values:
+    VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_ENGAGED_POS_G5: 9.03
+  response: 7E90562109E8703
