--- a/tests/test_cases/2021/commands/7E1.7E9.22380F.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.22380F.yaml
@@ -4,5 +4,8 @@ test_cases:
     VOLKSWAGEN_MQB_OUTPUT_SHAFT_2: 0
   response: 7E90562380F0000
 - expected_values:
+    VOLKSWAGEN_MQB_OUTPUT_SHAFT_2: 5120
+  response: 7E90562380F1400
+- expected_values:
     VOLKSWAGEN_MQB_OUTPUT_SHAFT_2: 20225
   response: 7E90562380F4F01
