--- a/tests/test_cases/2021/commands/7E1.7E9.223826.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.223826.yaml
@@ -4,5 +4,8 @@ test_cases:
     VOLKSWAGEN_MQB_TCM_TRANSMISSION_PART_1_VALVE_I_CMD: 372.9
   response: 7E905623826910E
 - expected_values:
+    VOLKSWAGEN_MQB_TCM_TRANSMISSION_PART_1_VALVE_I_CMD: 374.2
+  response: 7E9056238269E0E
+- expected_values:
     VOLKSWAGEN_MQB_TCM_TRANSMISSION_PART_1_VALVE_I_CMD: 1200
   response: 7E905623826E02E
