--- a/tests/test_cases/2021/commands/7E1.7E9.223827.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.223827.yaml
@@ -3,3 +3,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_MQB_TCM_TRANSMISSION_PART_1_VALVE_I_ACTUAL: 375
   response: 7E905623827A60E
+- expected_values:
+    VOLKSWAGEN_MQB_TCM_TRANSMISSION_PART_1_VALVE_I_ACTUAL: 1199
+  response: 7E905623827D62E
