--- a/tests/test_cases/2021/commands/7E1.7E9.223835.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.223835.yaml
@@ -1,6 +1,9 @@
 command_id: 7E1.7E9.223835
 test_cases:
 - expected_values:
+    VOLKSWAGEN_MQB_DQ250_CLUTCH_1_VALVE_I_ACTUAL: 333
+  response: 7E905623835020D
+- expected_values:
     VOLKSWAGEN_MQB_DQ250_CLUTCH_1_VALVE_I_ACTUAL: 48
   response: 7E905623835E001
 - expected_values:
