--- a/tests/test_cases/2021/commands/7E1.7E9.22383D.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.22383D.yaml
@@ -4,5 +4,8 @@ test_cases:
     VOLKSWAGEN_MQB_DQ250_CLUTCH_2_VALVE_I_SPECIFIED: 359.4
   response: 7E90562383D0A0E
 - expected_values:
+    VOLKSWAGEN_MQB_DQ250_CLUTCH_2_VALVE_I_SPECIFIED: 364.3
+  response: 7E90562383D3B0E
+- expected_values:
     VOLKSWAGEN_MQB_DQ250_CLUTCH_2_VALVE_I_SPECIFIED: 50
   response: 7E90562383DF401
