--- a/tests/test_cases/2021/commands/7E1.7E9.223862.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.223862.yaml
@@ -4,5 +4,11 @@ test_cases:
     VOLKSWAGEN_MQB_DQ250_ACUTAL_POS_GEAR_POSER_C: 10.49
   response: '7E9056238621904'
 - expected_values:
+    VOLKSWAGEN_MQB_DQ250_ACUTAL_POS_GEAR_POSER_C: 10.5
+  response: 7E9056238621A04
+- expected_values:
+    VOLKSWAGEN_MQB_DQ250_ACUTAL_POS_GEAR_POSER_C: 0
+  response: 7E905623862F6FF
+- expected_values:
     VOLKSWAGEN_MQB_DQ250_ACUTAL_POS_GEAR_POSER_C: 0
   response: 7E905623862F8FF
