--- a/tests/test_cases/2021/commands/7E0.22162F|din=03.yaml
+++ b/tests/test_cases/2021/commands/7E0.22162F|din=03.yaml
@@ -1,8 +1,14 @@
 command_id: 7E0.22162F|din=03
 test_cases:
 - expected_values:
+    VOLKSWAGEN_MQB_DPF_AIR_P_SENSOR_RAW_VALUE: 8
+  response: 7E80562162F0008
+- expected_values:
     VOLKSWAGEN_MQB_DPF_AIR_P_SENSOR_RAW_VALUE: 10
   response: 7E80562162F000A
+- expected_values:
+    VOLKSWAGEN_MQB_DPF_AIR_P_SENSOR_RAW_VALUE: 14
+  response: 7E80562162F000E
 - expected_values:
     VOLKSWAGEN_MQB_DPF_AIR_P_SENSOR_RAW_VALUE: 28
   response: 7E80562162F001C
