--- a/tests/test_cases/2021/commands/7E0.22269A|din=03.yaml
+++ b/tests/test_cases/2021/commands/7E0.22269A|din=03.yaml
@@ -1,6 +1,12 @@
 command_id: 7E0.22269A|din=03
 test_cases:
 - expected_values:
+    VOLKSWAGEN_MQB_DPF_DIFF_P_RAW_VALUE_1: 8
+  response: 7E80562269A0008
+- expected_values:
+    VOLKSWAGEN_MQB_DPF_DIFF_P_RAW_VALUE_1: 9
+  response: 7E80562269A0009
+- expected_values:
     VOLKSWAGEN_MQB_DPF_DIFF_P_RAW_VALUE_1: 19
   response: 7E80562269A0013
 - expected_values:
