--- a/tests/test_cases/2021/commands/7E0.7E8.221024.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.221024.yaml
@@ -4,5 +4,11 @@ test_cases:
     VOLKSWAGEN_MQB_AIR_MASS_1: 36.9
   response: '7E8056210240171'
 - expected_values:
+    VOLKSWAGEN_MQB_AIR_MASS_1: 46.5
+  response: 7E80562102401D1
+- expected_values:
     VOLKSWAGEN_MQB_AIR_MASS_1: 56.5
   response: '7E8056210240235'
+- expected_values:
+    VOLKSWAGEN_MQB_AIR_MASS_1: 79.1
+  response: '7E8056210240317'
