--- a/tests/test_cases/2021/commands/7E0.7E8.22103C.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.22103C.yaml
@@ -1,8 +1,14 @@
 command_id: 7E0.7E8.22103C
 test_cases:
 - expected_values:
+    VOLKSWAGEN_MQB_INT_MAN_P: 1000
+  response: 7E80562103C03E8
+- expected_values:
     VOLKSWAGEN_MQB_INT_MAN_P: 1037
   response: 7E80562103C040D
+- expected_values:
+    VOLKSWAGEN_MQB_INT_MAN_P: 1137
+  response: 7E80562103C0471
 - expected_values:
     VOLKSWAGEN_MQB_INT_MAN_P: 1339
   response: 7E80562103C053B
