--- a/tests/test_cases/2021/commands/7E0.7E8.2210C2.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.2210C2.yaml
@@ -4,5 +4,11 @@ test_cases:
     VOLKSWAGEN_PQ35_EGR_DUTY: 8.75
   response: 7E8056210C2036B
 - expected_values:
+    VOLKSWAGEN_PQ35_EGR_DUTY: 19.21
+  response: 7E8056210C20781
+- expected_values:
     VOLKSWAGEN_PQ35_EGR_DUTY: 22.89
   response: 7E8056210C208F1
+- expected_values:
+    VOLKSWAGEN_PQ35_EGR_DUTY: 27.99
+  response: 7E8056210C20AEF
