--- a/tests/test_cases/2021/commands/7E0.7E8.2210FB.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.2210FB.yaml
@@ -1,6 +1,9 @@
 command_id: 7E0.7E8.2210FB
 test_cases:
 - expected_values:
+    VOLKSWAGEN_PQ35_EXH_GAS_T_1: 172.3
+  response: 7E8056210FB1166
+- expected_values:
     VOLKSWAGEN_PQ35_EXH_GAS_T_1: 188.4
   response: 7E8056210FB1207
 - expected_values:
@@ -9,3 +12,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_PQ35_EXH_GAS_T_1: 251
   response: 7E8056210FB1479
+- expected_values:
+    VOLKSWAGEN_PQ35_EXH_GAS_T_1: 275.6
+  response: 7E8056210FB156F
