--- a/tests/test_cases/2021/commands/7E0.7E8.2214F7.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.2214F7.yaml
@@ -4,8 +4,14 @@ test_cases:
     VOLKSWAGEN_PQ35_EXHAUST_GAS_T_SENSOR_2: 48.8
   response: 7E8056214F70C93
 - expected_values:
+    VOLKSWAGEN_PQ35_EXHAUST_GAS_T_SENSOR_2: 159.6
+  response: 7E8056214F710E7
+- expected_values:
     VOLKSWAGEN_PQ35_EXHAUST_GAS_T_SENSOR_2: 190.5
   response: 7E8056214F7121C
+- expected_values:
+    VOLKSWAGEN_PQ35_EXHAUST_GAS_T_SENSOR_2: 194.9
+  response: 7E8056214F71248
 - expected_values:
     VOLKSWAGEN_PQ35_EXHAUST_GAS_T_SENSOR_2: 208.6
   response: 7E8056214F712D1
