--- a/tests/test_cases/2021/commands/7E0.7E8.2215AA.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.2215AA.yaml
@@ -8,4 +8,10 @@ test_cases:
   response: 7E8056215AA0002
 - expected_values:
     VOLKSWAGEN_PQ35_SELECTED_GEAR: 0
+  response: 7E8056215AA000B
+- expected_values:
+    VOLKSWAGEN_PQ35_SELECTED_GEAR: 0
   response: 7E8056215AA0010
+- expected_values:
+    VOLKSWAGEN_PQ35_SELECTED_GEAR: 0
+  response: 7E8056215AA0019
