--- a/tests/test_cases/2021/commands/7E0.7E8.221798.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.221798.yaml
@@ -1,6 +1,12 @@
 command_id: 7E0.7E8.221798
 test_cases:
 - expected_values:
+    VOLKSWAGEN_MQB_CHARGE_AIR_T_TUBROCHARGER_OUTLET_CALCULATED: 16.3
+  response: 7E8056217980B4E
+- expected_values:
+    VOLKSWAGEN_MQB_CHARGE_AIR_T_TUBROCHARGER_OUTLET_CALCULATED: 26.9
+  response: 7E8056217980BB8
+- expected_values:
     VOLKSWAGEN_MQB_CHARGE_AIR_T_TUBROCHARGER_OUTLET_CALCULATED: 34.3
   response: 7E8056217980C02
 - expected_values:
