--- a/tests/test_cases/2021/commands/7E0.7E8.221813.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.221813.yaml
@@ -4,8 +4,14 @@ test_cases:
     VOLKSWAGEN_MQB_EGR_VALVE_1_B1_MASS_I_SPEC: 18.5
   response: 7E80562181300B9
 - expected_values:
+    VOLKSWAGEN_MQB_EGR_VALVE_1_B1_MASS_I_SPEC: 22.8
+  response: 7E80562181300E4
+- expected_values:
     VOLKSWAGEN_MQB_EGR_VALVE_1_B1_MASS_I_SPEC: 25.2
   response: 7E80562181300FC
 - expected_values:
     VOLKSWAGEN_MQB_EGR_VALVE_1_B1_MASS_I_SPEC: 31.5
   response: 7E805621813013B
+- expected_values:
+    VOLKSWAGEN_MQB_EGR_VALVE_1_B1_MASS_I_SPEC: 36.4
+  response: 7E805621813016C
