--- a/tests/test_cases/2021/commands/7E0.7E8.221814.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.221814.yaml
@@ -1,8 +1,14 @@
 command_id: 7E0.7E8.221814
 test_cases:
 - expected_values:
+    VOLKSWAGEN_MQB_EGR_VALVE_2_B1_MASS_I_SPEC: 0
+  response: '7E8056218140000'
+- expected_values:
     VOLKSWAGEN_MQB_EGR_VALVE_2_B1_MASS_I_SPEC: 11.4
   response: '7E8056218140072'
+- expected_values:
+    VOLKSWAGEN_MQB_EGR_VALVE_2_B1_MASS_I_SPEC: 16.8
+  response: 7E80562181400A8
 - expected_values:
     VOLKSWAGEN_MQB_EGR_VALVE_2_B1_MASS_I_SPEC: 19.4
   response: 7E80562181400C2
