--- a/tests/test_cases/2021/commands/7E0.7E8.22181A.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.22181A.yaml
@@ -7,5 +7,8 @@ test_cases:
     VOLKSWAGEN_PQ35_BOOST_P_BEFORE_THROTTLE_CALCULATED_ACT: 10757500
   response: 7E80562181A10CF
 - expected_values:
+    VOLKSWAGEN_PQ35_BOOST_P_BEFORE_THROTTLE_CALCULATED_ACT: 12070000
+  response: 7E80562181A12DC
+- expected_values:
     VOLKSWAGEN_PQ35_BOOST_P_BEFORE_THROTTLE_CALCULATED_ACT: 13475000
   response: 7E80562181A150E
