--- a/tests/test_cases/2021/commands/7E0.7E8.221ABA.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.221ABA.yaml
@@ -9,3 +9,9 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_MQB_DPF_DISTANCE_SINCE_LAST_REGEN: 168.3
   response: 7E805621ABA0693
+- expected_values:
+    VOLKSWAGEN_MQB_DPF_DISTANCE_SINCE_LAST_REGEN: 170
+  response: 7E805621ABA06A4
+- expected_values:
+    VOLKSWAGEN_MQB_DPF_DISTANCE_SINCE_LAST_REGEN: 171.6
+  response: 7E805621ABA06B4
