--- a/tests/test_cases/2021/commands/7E0.7E8.222609.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.222609.yaml
@@ -9,3 +9,9 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_MQB_DPF_SOOT_MASS_CALCULATED: 21.66
   response: '7E8056226090876'
+- expected_values:
+    VOLKSWAGEN_MQB_DPF_SOOT_MASS_CALCULATED: 22.12
+  response: 7E80562260908A4
+- expected_values:
+    VOLKSWAGEN_MQB_DPF_SOOT_MASS_CALCULATED: 22.49
+  response: 7E80562260908C9
