--- a/tests/test_cases/2021/commands/7E1.7E9.22028D.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.22028D.yaml
@@ -1,6 +1,12 @@
 command_id: 7E1.7E9.22028D
 test_cases:
 - expected_values:
+    VOLKSWAGEN_MQB_TCM_ECU_T: 9
+  response: 7E90562028D0900
+- expected_values:
+    VOLKSWAGEN_MQB_TCM_ECU_T: 13
+  response: 7E90562028D0D00
+- expected_values:
     VOLKSWAGEN_MQB_TCM_ECU_T: 22
   response: 7E90562028D1600
 - expected_values:
