--- a/tests/test_cases/2021/commands/7E1.7E9.22100B.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.22100B.yaml
@@ -4,5 +4,11 @@ test_cases:
     VOLKSWAGEN_MQB_TCM_DRIVER_DEMAND_TORQUE: 1280.25
   response: 7E90562100B6405
 - expected_values:
+    VOLKSWAGEN_MQB_TCM_DRIVER_DEMAND_TORQUE: 1434
+  response: 7E90562100B7008
+- expected_values:
     VOLKSWAGEN_MQB_TCM_DRIVER_DEMAND_TORQUE: -870.3
   response: 7E90562100BBC02
+- expected_values:
+    VOLKSWAGEN_MQB_TCM_DRIVER_DEMAND_TORQUE: -153.3
+  response: 7E90562100BF406
