--- a/tests/test_cases/2021/commands/7E1.7E9.22102B.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.22102B.yaml
@@ -1,6 +1,12 @@
 command_id: 7E1.7E9.22102B
 test_cases:
 - expected_values:
+    VOLKSWAGEN_PQ35_CLUTCH_1_T: 16
+  response: 7E90562102B1000
+- expected_values:
+    VOLKSWAGEN_PQ35_CLUTCH_1_T: 17
+  response: 7E90562102B1100
+- expected_values:
     VOLKSWAGEN_PQ35_CLUTCH_1_T: 30
   response: 7E90562102B1E00
 - expected_values:
