--- a/tests/test_cases/2021/commands/7E1.7E9.22102C.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.22102C.yaml
@@ -1,5 +1,11 @@
 command_id: 7E1.7E9.22102C
 test_cases:
 - expected_values:
+    VOLKSWAGEN_PQ35_CLUTCH_2_T: 16
+  response: 7E90562102C1000
+- expected_values:
+    VOLKSWAGEN_PQ35_CLUTCH_2_T: 17
+  response: 7E90562102C1100
+- expected_values:
     VOLKSWAGEN_PQ35_CLUTCH_2_T: 29
   response: 7E90562102C1D00
