--- a/tests/test_cases/2021/commands/7E1.7E9.221082.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.221082.yaml
@@ -3,3 +3,9 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_ENGAGED_POS_G1: -8.74
   response: 7E90562108296FC
+- expected_values:
+    VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_ENGAGED_POS_G1: -8.73
+  response: 7E90562108297FC
+- expected_values:
+    VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_ENGAGED_POS_G1: -8.72
+  response: 7E90562108298FC
