--- a/tests/test_cases/2021/commands/7E1.7E9.221083.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.221083.yaml
@@ -1,5 +1,11 @@
 command_id: 7E1.7E9.221083
 test_cases:
 - expected_values:
+    VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_SYNCHRO_POS_G1: -2.49
+  response: 7E90562108307FF
+- expected_values:
+    VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_SYNCHRO_POS_G1: -2.45
+  response: 7E9056210830BFF
+- expected_values:
     VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_SYNCHRO_POS_G1: -2.61
   response: 7E905621083FBFE
