--- a/tests/test_cases/2021/commands/7E1.7E9.221084.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.221084.yaml
@@ -6,3 +6,9 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_PQ35_GANGSTELLER_A_ADAPT_NEUTRALPOS: -0.26
   response: 7E905621084E6FF
+- expected_values:
+    VOLKSWAGEN_PQ35_GANGSTELLER_A_ADAPT_NEUTRALPOS: -0.21
+  response: 7E905621084EBFF
+- expected_values:
+    VOLKSWAGEN_PQ35_GANGSTELLER_A_ADAPT_NEUTRALPOS: -0.17
+  response: 7E905621084EFFF
