--- a/tests/test_cases/2021/commands/7E1.7E9.221085.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.221085.yaml
@@ -3,3 +3,9 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_SYNCHRO_POS_G3: 2.01
   response: 7E905621085C900
+- expected_values:
+    VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_SYNCHRO_POS_G3: 2.02
+  response: 7E905621085CA00
+- expected_values:
+    VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_SYNCHRO_POS_G3: 2.08
+  response: 7E905621085D000
