--- a/tests/test_cases/2021/commands/7E1.7E9.221086.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.221086.yaml
@@ -1,8 +1,14 @@
 command_id: 7E1.7E9.221086
 test_cases:
 - expected_values:
+    VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_ENGAGED_POS_G3: 10.31
+  response: '7E9056210860704'
+- expected_values:
     VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_ENGAGED_POS_G3: 10.32
   response: '7E9056210860804'
 - expected_values:
     VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_ENGAGED_POS_G3: 10.35
   response: 7E9056210860B04
+- expected_values:
+    VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_ENGAGED_POS_G3: 10.42
+  response: '7E9056210861204'
