--- a/tests/test_cases/2021/commands/7E1.7E9.221091.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.221091.yaml
@@ -1,6 +1,9 @@
 command_id: 7E1.7E9.221091
 test_cases:
 - expected_values:
+    VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_SYNCHRO_POS_G2: -2.49
+  response: 7E90562109107FF
+- expected_values:
     VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_SYNCHRO_POS_G2: -2.45
   response: 7E9056210910BFF
 - expected_values:
