--- a/tests/test_cases/2021/commands/7E1.7E9.221094.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.221094.yaml
@@ -1,6 +1,9 @@
 command_id: 7E1.7E9.221094
 test_cases:
 - expected_values:
+    VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_ENGAGED_POS_G4: 9.59
+  response: 7E905621094BF03
+- expected_values:
     VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_ENGAGED_POS_G4: 9.61
   response: 7E905621094C103
 - expected_values:
