--- a/tests/test_cases/2021/commands/7E1.7E9.22109F.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.22109F.yaml
@@ -6,3 +6,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_SYNCHRO_POS_G5: 1.71
   response: 7E90562109FAB00
+- expected_values:
+    VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_SYNCHRO_POS_G5: 1.75
+  response: 7E90562109FAF00
