--- a/tests/test_cases/2021/commands/7E1.7E9.2210A2.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.2210A2.yaml
@@ -1,5 +1,8 @@
 command_id: 7E1.7E9.2210A2
 test_cases:
 - expected_values:
+    VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_ENGAGED_POS_G7: -9.97
+  response: 7E9056210A21BFC
+- expected_values:
     VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_ENGAGED_POS_G7: -9.96
   response: 7E9056210A21CFC
