--- a/tests/test_cases/2021/commands/7E1.7E9.2210AC.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.2210AC.yaml
@@ -6,3 +6,9 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_ENGAGED_POS_G6: 9.19
   response: 7E9056210AC9703
+- expected_values:
+    VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_ENGAGED_POS_G6: 9.25
+  response: 7E9056210AC9D03
+- expected_values:
+    VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_ENGAGED_POS_G6: 9.28
+  response: 7E9056210ACA003
