--- a/tests/test_cases/2021/commands/7E1.7E9.221110.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.221110.yaml
@@ -4,5 +4,11 @@ test_cases:
     VOLKSWAGEN_PQ35_WORKING_HOURS: 1762.42391
   response: 7E90762111050A4E812
 - expected_values:
+    VOLKSWAGEN_PQ35_WORKING_HOURS: 1762.50649
+  response: 7E90762111061DEE812
+- expected_values:
     VOLKSWAGEN_PQ35_WORKING_HOURS: 1762.38051
   response: 7E907621110CC85E812
+- expected_values:
+    VOLKSWAGEN_PQ35_WORKING_HOURS: 1762.55261
+  response: 7E907621110CEFEE812
