--- a/tests/test_cases/2021/commands/7E1.7E9.22380A.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.22380A.yaml
@@ -1,8 +1,14 @@
 command_id: 7E1.7E9.22380A
 test_cases:
 - expected_values:
+    VOLKSWAGEN_MQB_TCM_TRANSMISSION_INPUT_SPD_7E1_380A: 786
+  response: 7E90562380A1203
+- expected_values:
     VOLKSWAGEN_MQB_TCM_TRANSMISSION_INPUT_SPD_7E1_380A: 1431
   response: 7E90562380A9705
+- expected_values:
+    VOLKSWAGEN_MQB_TCM_TRANSMISSION_INPUT_SPD_7E1_380A: 1181
+  response: 7E90562380A9D04
 - expected_values:
     VOLKSWAGEN_MQB_TCM_TRANSMISSION_INPUT_SPD_7E1_380A: 1745
   response: 7E90562380AD106
