--- a/tests/test_cases/2021/commands/7E1.7E9.22380B.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.22380B.yaml
@@ -4,5 +4,11 @@ test_cases:
     VOLKSWAGEN_MQB_TCM_TRANSMISSION_OUTPUT_SPD_7E1_380B: 334
   response: 7E90562380B4E01
 - expected_values:
+    VOLKSWAGEN_MQB_TCM_TRANSMISSION_OUTPUT_SPD_7E1_380B: 352
+  response: 7E90562380B6001
+- expected_values:
+    VOLKSWAGEN_MQB_TCM_TRANSMISSION_OUTPUT_SPD_7E1_380B: 184
+  response: 7E90562380BB800
+- expected_values:
     VOLKSWAGEN_MQB_TCM_TRANSMISSION_OUTPUT_SPD_7E1_380B: 242
   response: 7E90562380BF200
