--- a/tests/test_cases/2021/commands/7E1.7E9.22380C.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.22380C.yaml
@@ -4,5 +4,11 @@ test_cases:
     VOLKSWAGEN_MQB_INPUT_SHAFT_1: 1400
   response: 7E90562380C7805
 - expected_values:
+    VOLKSWAGEN_MQB_INPUT_SHAFT_1: 636
+  response: 7E90562380C7C02
+- expected_values:
+    VOLKSWAGEN_MQB_INPUT_SHAFT_1: 1192
+  response: 7E90562380CA804
+- expected_values:
     VOLKSWAGEN_MQB_INPUT_SHAFT_1: 740
   response: 7E90562380CE402
