--- a/tests/test_cases/2021/commands/7E1.7E9.22381D.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.22381D.yaml
@@ -1,8 +1,14 @@
 command_id: 7E1.7E9.22381D
 test_cases:
 - expected_values:
+    VOLKSWAGEN_MQB_TCM_EOP_ACTUAL: 3.98
+  response: 7E90562381D8E01
+- expected_values:
     VOLKSWAGEN_MQB_TCM_EOP_ACTUAL: 4.07
   response: 7E90562381D9701
 - expected_values:
     VOLKSWAGEN_MQB_TCM_EOP_ACTUAL: 4.21
   response: 7E90562381DA501
+- expected_values:
+    VOLKSWAGEN_MQB_TCM_EOP_ACTUAL: 4.78
+  response: 7E90562381DDE01
