--- a/tests/test_cases/2021/commands/7E1.7E9.22382A.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.22382A.yaml
@@ -3,3 +3,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_MQB_TCM_TRANSMISSION_PART_2_VALVE_I_CMD: 1200
   response: 7E90562382AE02E
+- expected_values:
+    VOLKSWAGEN_MQB_TCM_TRANSMISSION_PART_2_VALVE_I_CMD: 358
+  response: 7E90562382AFC0D
