--- a/tests/test_cases/2021/commands/7E1.7E9.22382B.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.22382B.yaml
@@ -1,6 +1,12 @@
 command_id: 7E1.7E9.22382B
 test_cases:
 - expected_values:
+    VOLKSWAGEN_MQB_TCM_TRANSMISSION_PART_2_VALVE_I_ACTUAL: 1198
+  response: 7E90562382BCC2E
+- expected_values:
+    VOLKSWAGEN_MQB_TCM_TRANSMISSION_PART_2_VALVE_I_ACTUAL: 98
+  response: 7E90562382BD403
+- expected_values:
     VOLKSWAGEN_MQB_TCM_TRANSMISSION_PART_2_VALVE_I_ACTUAL: 1200
   response: 7E90562382BE02E
 - expected_values:
