--- a/tests/test_cases/2021/commands/7E1.7E9.22383E.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.22383E.yaml
@@ -1,6 +1,12 @@
 command_id: 7E1.7E9.22383E
 test_cases:
 - expected_values:
+    VOLKSWAGEN_MQB_DQ250_CLUTCH_2_VALVE_I_ACTUAL: 414
+  response: 7E90562383E2C10
+- expected_values:
+    VOLKSWAGEN_MQB_DQ250_CLUTCH_2_VALVE_I_ACTUAL: 399
+  response: 7E90562383E960F
+- expected_values:
     VOLKSWAGEN_MQB_DQ250_CLUTCH_2_VALVE_I_ACTUAL: 356
   response: 7E90562383EE80D
 - expected_values:
