--- a/tests/test_cases/2021/commands/7E1.7E9.223852.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.223852.yaml
@@ -2,6 +2,9 @@ command_id: 7E1.7E9.223852
 test_cases:
 - expected_values:
     VOLKSWAGEN_MQB_DQ250_ACUTAL_POS_GEAR_POSER_A: 0
+  response: '7E9056238520000'
+- expected_values:
+    VOLKSWAGEN_MQB_DQ250_ACUTAL_POS_GEAR_POSER_A: 0
   response: 7E905623852FAFF
 - expected_values:
     VOLKSWAGEN_MQB_DQ250_ACUTAL_POS_GEAR_POSER_A: 0
