--- a/tests/test_cases/2021/commands/7E1.7E9.22385A.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.22385A.yaml
@@ -6,3 +6,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_MQB_DQ250_ACUTAL_POS_GEAR_POSER_B: 0.03
   response: 7E90562385A0300
+- expected_values:
+    VOLKSWAGEN_MQB_DQ250_ACUTAL_POS_GEAR_POSER_B: 0
+  response: 7E90562385AFEFF
