--- a/tests/test_cases/2021/commands/7E1.7E9.22386A.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.22386A.yaml
@@ -1,6 +1,12 @@
 command_id: 7E1.7E9.22386A
 test_cases:
 - expected_values:
+    VOLKSWAGEN_MQB_DQ250_ACUTAL_POS_GEAR_POSER_D: 0.05
+  response: 7E90562386A0500
+- expected_values:
+    VOLKSWAGEN_MQB_DQ250_ACUTAL_POS_GEAR_POSER_D: 0.06
+  response: 7E90562386A0600
+- expected_values:
     VOLKSWAGEN_MQB_DQ250_ACUTAL_POS_GEAR_POSER_D: 9.4
   response: 7E90562386AAC03
 - expected_values:
