--- a/tests/test_cases/2021/commands/7E1.7E9.223871.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.223871.yaml
@@ -6,3 +6,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_MQB_DQ250_SPECIFIED_IDLE_RPM: 440
   response: 7E905623871B801
+- expected_values:
+    VOLKSWAGEN_MQB_DQ250_SPECIFIED_IDLE_RPM: 980
+  response: 7E905623871D403
