--- a/tests/test_cases/2021/commands/7E1.7E9.22388C.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.22388C.yaml
@@ -3,3 +3,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_MQB_TCM_IGNITION_CYCLES: 486
   response: 7E90562388CE601
+- expected_values:
+    VOLKSWAGEN_MQB_TCM_IGNITION_CYCLES: 487
+  response: 7E90562388CE701
