--- a/tests/test_cases/2021/commands/7E1.7E9.2238EA.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.2238EA.yaml
@@ -4,5 +4,11 @@ test_cases:
     VOLKSWAGEN_PQ35_CLUTCH_2_ACTUAL_P: 0.01
   response: 7E9056238EA0100
 - expected_values:
+    VOLKSWAGEN_PQ35_CLUTCH_2_ACTUAL_P: 0.02
+  response: 7E9056238EA0200
+- expected_values:
+    VOLKSWAGEN_PQ35_CLUTCH_2_ACTUAL_P: 2.63
+  response: 7E9056238EA0701
+- expected_values:
     VOLKSWAGEN_PQ35_CLUTCH_2_ACTUAL_P: 4.15
   response: 7E9056238EA9F01
