--- a/tests/test_cases/2021/commands/7E1.7E9.2238EB.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.2238EB.yaml
@@ -1,6 +1,12 @@
 command_id: 7E1.7E9.2238EB
 test_cases:
 - expected_values:
+    VOLKSWAGEN_PQ35_CLUTCH_1_ACTUAL_P: 0.03
+  response: 7E9056238EB0300
+- expected_values:
+    VOLKSWAGEN_PQ35_CLUTCH_1_ACTUAL_P: 2.84
+  response: 7E9056238EB1C01
+- expected_values:
     VOLKSWAGEN_PQ35_CLUTCH_1_ACTUAL_P: 3.34
   response: 7E9056238EB4E01
 - expected_values:
