--- a/tests/test_cases/2021/commands/7E1.7E9.2238ED.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.2238ED.yaml
@@ -1,8 +1,14 @@
 command_id: 7E1.7E9.2238ED
 test_cases:
 - expected_values:
+    VOLKSWAGEN_PQ35_CLUTCH_2_CMD_P: 0
+  response: 7E9056238ED0000
+- expected_values:
     VOLKSWAGEN_PQ35_CLUTCH_2_CMD_P: 2.94
   response: 7E9056238ED2601
 - expected_values:
     VOLKSWAGEN_PQ35_CLUTCH_2_CMD_P: 3.17
   response: 7E9056238ED3D01
+- expected_values:
+    VOLKSWAGEN_PQ35_CLUTCH_2_CMD_P: 2.38
+  response: 7E9056238EDEE00
